--- a/src/content/docs/expert/en/getting-started/profile.mdx
+++ b/src/content/docs/expert/en/getting-started/profile.mdx
@@ -9,38 +9,59 @@ Your profile is your digital presence on Eleva Care. A complete, professional pr
 
 ## Profile Elements
 
-### Required Information
+<Tabs items={['Required', 'Optional']}>
+  <Tab value="Required">
+    **Required Information**
 
-These fields must be completed before you can publish:
+    These fields must be completed before you can publish:
 
-| Field | Description | Tips |
-|-------|-------------|------|
-| **Display Name** | Your professional name | Use your name with credentials (e.g., "Dr. Maria Santos, PT, PhD") |
-| **Profile Photo** | Professional headshot | High-quality, friendly, professional attire |
-| **Bio** | 100-1000 characters | Highlight your expertise and approach |
-| **Specializations** | Areas of expertise | Select all that apply |
-| **Languages** | Languages you speak | Important for international patients |
+    | Field | Description | Tips |
+    |-------|-------------|------|
+    | Display Name | Your professional name | Include credentials (e.g., "Dr. Maria Santos, PT, PhD") |
+    | Profile Photo | Professional headshot | High-quality, friendly, professional attire |
+    | Bio | 100-1000 characters | Highlight your expertise and approach |
+    | Specializations | Areas of expertise | Select all that apply |
+    | Languages | Languages you speak | Important for international patients |
+  </Tab>
+  <Tab value="Optional">
+    **Optional Information**
 
-### Optional Information
+    Enhance your profile with:
 
-Enhance your profile with:
-
-- Years of experience
-- Education and certifications
-- Professional associations
-- Location (city/country)
-- Social media links (LinkedIn, website)
+    - Years of experience
+    - Education and certifications
+    - Professional associations
+    - Location (city/country)
+    - Social media links (LinkedIn, website)
+  </Tab>
+</Tabs>
 
 ## Writing Your Bio
 
 Your bio is often the first thing patients read. Make it count.
 
-### Structure
+<Steps>
+  <Step>
+    ### Opening
 
-1. **Opening** - Your specialty and experience
-2. **Approach** - How you work with patients
-3. **Background** - Key credentials and training
-4. **Personal Touch** - Why you're passionate about this work
+    Lead with your specialty and years of experience.
+  </Step>
+  <Step>
+    ### Approach
+
+    Describe how you work with patients and your care philosophy.
+  </Step>
+  <Step>
+    ### Background
+
+    Highlight key credentials, training, and certifications.
+  </Step>
+  <Step>
+    ### Personal Touch
+
+    Share why you're passionate about this work.
+  </Step>
+</Steps>
 
 ### Example Bio
 
@@ -50,45 +71,54 @@ Your bio is often the first thing patients read. Make it count.
 >
 > I hold a PhD in Women's Health Physiotherapy from the University of Lisbon and am certified in biofeedback and manual therapy techniques."
 
-<Callout type="tip">
-  **Pro Tip**: Write in first person ("I specialize in...") to create a personal connection with potential patients.
+<Callout type="info">
+  Write in first person ("I specialize in...") to create a personal connection with potential patients.
 </Callout>
 
 ## Profile Photo Guidelines
 
-Your photo significantly impacts patient trust. Follow these guidelines:
+<Tabs items={['Recommended', 'Avoid']}>
+  <Tab value="Recommended">
+    **Best Practices**
 
-### Do's
+    - Use a recent, high-resolution photo
+    - Dress professionally (as you would for a consultation)
+    - Choose a neutral or professional background
+    - Smile naturally — appear approachable
+    - Ensure good lighting (natural light works best)
+  </Tab>
+  <Tab value="Avoid">
+    **What Not to Do**
 
-- ✅ Use a recent, high-resolution photo
-- ✅ Dress professionally (as you would for a consultation)
-- ✅ Choose a neutral or professional background
-- ✅ Smile naturally - appear approachable
-- ✅ Ensure good lighting (natural light works best)
-
-### Don'ts
-
-- ❌ Use group photos or photos with others
-- ❌ Use heavily filtered or edited photos
-- ❌ Use casual vacation or social photos
-- ❌ Use logos or graphics instead of your photo
+    - Group photos or photos with others
+    - Heavily filtered or edited photos
+    - Casual vacation or social photos
+    - Logos or graphics instead of your photo
+  </Tab>
+</Tabs>
 
 ## Selecting Specializations
 
-Choose specializations that accurately reflect your expertise:
-
-### Primary Categories
-
-- **Pregnancy & Birth** - Prenatal care, birth preparation
-- **Postpartum** - Recovery, breastfeeding support
-- **Pelvic Health** - Incontinence, prolapse, pelvic pain
-- **Menopause** - Hormonal health, symptom management
-- **Sexual Health** - Dysfunction, counseling
-- **Mental Health** - Perinatal mental health, anxiety, depression
-
-### Sub-specializations
-
-Each category has specific sub-specializations. Select only those where you have training and experience.
+<Accordions>
+  <Accordion title="Pregnancy & Birth">
+    Prenatal care, birth preparation, and pregnancy-related consultations.
+  </Accordion>
+  <Accordion title="Postpartum">
+    Recovery, breastfeeding support, and fourth trimester care.
+  </Accordion>
+  <Accordion title="Pelvic Health">
+    Incontinence, prolapse, pelvic pain, and rehabilitation.
+  </Accordion>
+  <Accordion title="Menopause">
+    Hormonal health and symptom management.
+  </Accordion>
+  <Accordion title="Sexual Health">
+    Dysfunction, counseling, and wellness.
+  </Accordion>
+  <Accordion title="Mental Health">
+    Perinatal mental health, anxiety, and depression.
+  </Accordion>
+</Accordions>
 
 <Callout type="warning">
   Only select specializations where you're qualified to provide care. Patients trust that listed specializations represent your actual expertise.
@@ -98,66 +128,71 @@ Each category has specific sub-specializations. Select only those where you have
 
 ### Required Documents
 
-To publish your profile, you must verify:
+<Steps>
+  <Step>
+    ### Identity Verification
 
-1. **Identity** - Government-issued ID
-2. **Professional License** - Current, valid license in your field
-3. **Insurance** - Proof of professional liability coverage
+    Upload a government-issued ID.
+  </Step>
+  <Step>
+    ### Professional License
 
-### Verification Process
+    Provide your current, valid license in your field.
+  </Step>
+  <Step>
+    ### Insurance Proof
 
-1. Upload documents in your dashboard
-2. Our team reviews within 2-3 business days
-3. Receive confirmation email when approved
-4. Profile eligible for publication
+    Submit proof of professional liability coverage.
+  </Step>
+  <Step>
+    ### Review Process
+
+    Our team reviews within 2-3 business days and sends confirmation when approved.
+  </Step>
+</Steps>
 
 ## Publishing Your Profile
 
-Once all required elements are complete:
+<Steps>
+  <Step>
+    ### Review Information
 
-1. Go to **Expert Dashboard** > **Profile**
-2. Review all information
-3. Click **Publish Profile**
-4. Your profile becomes visible to patients
+    Go to **Expert Dashboard** → **Profile** and review all sections.
+  </Step>
+  <Step>
+    ### Publish
 
-### Unpublishing
+    Click **Publish Profile** to make your profile visible to patients.
+  </Step>
+  <Step>
+    ### Manage Visibility
 
-You can unpublish your profile at any time:
-
-1. Go to **Profile Settings**
-2. Toggle **Profile Visibility** off
-3. Existing appointments are not affected
-
-## Editing Your Profile
-
-You can update your profile anytime:
-
-1. Go to **Expert Dashboard** > **Profile**
-2. Click **Edit** on any section
-3. Make your changes
-4. Click **Save**
-
-Changes are reflected immediately on your public profile.
+    Toggle **Profile Visibility** in settings anytime. Existing appointments are not affected.
+  </Step>
+</Steps>
 
 ## Best Practices
 
-### Stand Out From Others
+<Tabs items={['Stand Out', 'Stay Current']}>
+  <Tab value="Stand Out">
+    **Differentiate Yourself**
 
-- Use a unique, memorable bio
-- Highlight specific training or certifications
-- Mention languages spoken
-- Include your approach to patient care
+    - Use a unique, memorable bio
+    - Highlight specific training or certifications
+    - Mention languages spoken
+    - Describe your approach to patient care
+  </Tab>
+  <Tab value="Stay Current">
+    **Keep It Updated**
 
-### Keep It Updated
+    - Review your profile quarterly
+    - Update credentials when renewed
+    - Add new specializations as you gain expertise
+    - Refresh your photo every 2-3 years
+  </Tab>
+</Tabs>
 
-- Review your profile quarterly
-- Update credentials when renewed
-- Add new specializations as you gain expertise
-- Refresh your photo every 2-3 years
-
-## Next Steps
-
-Once your profile is set up:
+---
 
 <Cards>
   <Card title="Create Services" href="/docs/expert/getting-started/services">
@@ -167,5 +202,3 @@ Once your profile is set up:
     Configure your working hours
   </Card>
 </Cards>
-
-
