--- a/src/content/docs/expert/en/getting-started/services.mdx
+++ b/src/content/docs/expert/en/getting-started/services.mdx
@@ -5,117 +5,117 @@ description: Define your consultation offerings with clear descriptions and appr
 
 # Creating Services
 
-Services (also called "events" in the system) are the consultations you offer to patients. Each service has its own description, duration, and price.
+Services are the consultations you offer to patients. Each service has its own description, duration, and price.
 
 ## Service Components
 
-### Required Fields
+<Tabs items={['Required', 'Optional']}>
+  <Tab value="Required">
+    **Required Fields**
 
-| Field | Description |
-|-------|-------------|
-| **Title** | Clear, descriptive name (e.g., "Initial Pelvic Health Consultation") |
-| **Description** | What patients can expect from this service |
-| **Duration** | Consultation length (30, 45, 60, or 90 minutes) |
-| **Price** | Your fee for this service |
-| **Category** | Primary service category |
+    | Field | Description |
+    |-------|-------------|
+    | Title | Clear, descriptive name (e.g., "Initial Pelvic Health Consultation") |
+    | Description | What patients can expect from this service |
+    | Duration | Consultation length (30, 45, 60, or 90 minutes) |
+    | Price | Your fee for this service |
+    | Category | Primary service category |
+  </Tab>
+  <Tab value="Optional">
+    **Optional Fields**
 
-### Optional Fields
-
-- Preparation instructions for patients
-- Follow-up information
-- Required materials or forms
-- Video vs. in-person availability
+    - Preparation instructions for patients
+    - Follow-up information
+    - Required materials or forms
+    - Video vs. in-person availability
+  </Tab>
+</Tabs>
 
 ## Types of Services
 
-### Initial Consultations
+<Accordions>
+  <Accordion title="Initial Consultations">
+    First-time appointments for new patients:
 
-First-time appointments for new patients:
+    - Longer duration (typically 60-90 minutes)
+    - Comprehensive assessment
+    - Treatment planning
+    - Higher price point
 
-- Longer duration (typically 60-90 minutes)
-- Comprehensive assessment
-- Treatment planning
-- Higher price point
+    **Example:**
+    > **Initial Pelvic Floor Assessment**
+    > 60 minutes | €120
+    >
+    > Comprehensive evaluation including health history, symptom assessment, and personalized treatment recommendations.
+  </Accordion>
+  <Accordion title="Follow-Up Sessions">
+    Ongoing appointments for established patients:
 
-**Example:**
-> **Initial Pelvic Floor Assessment**
-> 60 minutes | €120
->
-> Comprehensive evaluation including health history, symptom assessment, and personalized treatment recommendations.
+    - Shorter duration (30-45 minutes)
+    - Progress review
+    - Treatment continuation
+    - Lower price point
 
-### Follow-Up Sessions
+    **Example:**
+    > **Follow-Up Pelvic Floor Session**
+    > 45 minutes | €80
+    >
+    > Continue your treatment plan with exercises, progress assessment, and adjustments as needed.
+  </Accordion>
+  <Accordion title="Specialized Services">
+    Targeted services for specific needs:
 
-Ongoing appointments for established patients:
-
-- Shorter duration (30-45 minutes)
-- Progress review
-- Treatment continuation
-- Lower price point
-
-**Example:**
-> **Follow-Up Pelvic Floor Session**
-> 45 minutes | €80
->
-> Continue your treatment plan with exercises, progress assessment, and adjustments as needed.
-
-### Specialized Services
-
-Targeted services for specific needs:
-
-**Examples:**
-- Pregnancy preparation session
-- Postpartum recovery assessment
-- Menopause symptom consultation
-- Pre-surgical preparation
+    - Pregnancy preparation session
+    - Postpartum recovery assessment
+    - Menopause symptom consultation
+    - Pre-surgical preparation
+  </Accordion>
+</Accordions>
 
 ## Creating Your First Service
 
-### Step 1: Navigate to Services
+<Steps>
+  <Step>
+    ### Navigate to Services
 
-1. Go to **Expert Dashboard**
-2. Click **Services** in the menu
-3. Click **Create Service**
+    Go to **Expert Dashboard** → **Services** → **Create Service**.
+  </Step>
+  <Step>
+    ### Basic Information
 
-### Step 2: Basic Information
+    Enter a clear, descriptive title, select the primary category, choose duration, and set your price.
+  </Step>
+  <Step>
+    ### Write Description
 
-1. Enter a clear, descriptive title
-2. Select the primary category
-3. Choose the service duration
-4. Set your price
+    Answer: What happens during this consultation? Who is it for? What outcomes can patients expect? What should they prepare?
+  </Step>
+  <Step>
+    ### Configure Options
 
-### Step 3: Write Description
+    Enable video consultation, in-person options, buffer time, and advance notice requirements.
+  </Step>
+  <Step>
+    ### Publish
 
-Your description should answer:
+    Click **Save & Publish** to make your service available for booking.
+  </Step>
+</Steps>
 
-- What happens during this consultation?
-- Who is this service for?
-- What outcomes can patients expect?
-- What should patients prepare beforehand?
-
-<Callout type="tip">
-  **Pro Tip**: Use bullet points to make your description scannable. Patients often skim before booking.
+<Callout type="info">
+  Use bullet points in your description to make it scannable. Patients often skim before booking.
 </Callout>
-
-### Step 4: Configure Options
-
-- **Video Consultation**: Enable for remote appointments
-- **In-Person**: Enable if you see patients in a physical location
-- **Buffer Time**: Add time before/after for notes
-- **Advance Notice**: Minimum booking lead time
-
-### Step 5: Publish
-
-Click **Save & Publish** to make your service available for booking.
 
 ## Pricing Your Services
 
 ### Factors to Consider
 
-- Your expertise level and credentials
-- Local market rates
-- Session duration
-- Consultation complexity
-- Your platform fees (8-20% depending on plan)
+| Factor | Description |
+|--------|-------------|
+| Expertise | Your credentials and experience level |
+| Market | Local rates and competitor pricing |
+| Duration | Session length and complexity |
+| Platform Fees | 8-20% depending on your plan |
 
 ### Pricing Guidelines
 
@@ -126,13 +126,7 @@ Click **Save & Publish** to make your service available for booking.
 | Specialized Session (60 min) | €100 - €180 |
 | Quick Check-In (30 min) | €40 - €70 |
 
-<Callout type="info">
-  These are guidelines only. Your pricing should reflect your expertise, credentials, and target market.
-</Callout>
-
 ### Platform Fees
-
-Remember to factor in platform fees when pricing:
 
 | Plan | Commission |
 |------|------------|
@@ -145,76 +139,86 @@ Remember to factor in platform fees when pricing:
 
 ## Service Limits
 
-### Community Experts
+<Tabs items={['Community', 'Top Expert']}>
+  <Tab value="Community">
+    **Community Experts**
 
-- Up to 5 active services
-- Basic customization options
+    - Up to 5 active services
+    - Basic customization options
+  </Tab>
+  <Tab value="Top Expert">
+    **Top Experts**
 
-### Top Experts
-
-- Unlimited services
-- Advanced customization
-- Package offerings (coming soon)
+    - Unlimited services
+    - Advanced customization
+    - Package offerings (coming soon)
+  </Tab>
+</Tabs>
 
 ## Managing Services
 
-### Editing Services
+<Accordions>
+  <Accordion title="Editing Services">
+    1. Go to **Services**
+    2. Click on the service
+    3. Click **Edit**
+    4. Make changes and **Save**
 
-1. Go to **Services**
-2. Click on the service
-3. Click **Edit**
-4. Make changes
-5. Click **Save**
+    <Callout type="warning">
+      Changes to existing services don't affect already-booked appointments.
+    </Callout>
+  </Accordion>
+  <Accordion title="Deactivating Services">
+    To temporarily hide a service:
 
-<Callout type="warning">
-  Changes to existing services don't affect already-booked appointments.
-</Callout>
+    1. Go to the service
+    2. Toggle **Active** off
+    3. Service won't appear for new bookings
+  </Accordion>
+  <Accordion title="Deleting Services">
+    To permanently remove a service:
 
-### Deactivating Services
-
-To temporarily hide a service:
-
-1. Go to the service
-2. Toggle **Active** off
-3. Service won't appear for new bookings
-
-### Deleting Services
-
-To permanently remove a service:
-
-1. Ensure no pending appointments
-2. Click **Delete Service**
-3. Confirm deletion
+    1. Ensure no pending appointments
+    2. Click **Delete Service**
+    3. Confirm deletion
+  </Accordion>
+</Accordions>
 
 ## Best Practices
 
-### Clear Naming
+<Tabs items={['Naming', 'Descriptions', 'Pricing']}>
+  <Tab value="Naming">
+    **Clear Naming**
 
-**Good:**
-- "Initial Pelvic Floor Consultation"
-- "Postpartum Recovery Assessment"
-- "Menopause Symptom Management"
+    **Good:**
+    - "Initial Pelvic Floor Consultation"
+    - "Postpartum Recovery Assessment"
+    - "Menopause Symptom Management"
 
-**Avoid:**
-- "Consultation 1"
-- "Session"
-- "Meeting"
+    **Avoid:**
+    - "Consultation 1"
+    - "Session"
+    - "Meeting"
+  </Tab>
+  <Tab value="Descriptions">
+    **Detailed Descriptions**
 
-### Detailed Descriptions
+    Include:
+    - What you'll cover
+    - Who should book this
+    - What to expect
+    - Preparation needed
+  </Tab>
+  <Tab value="Pricing">
+    **Competitive Pricing**
 
-Include:
-- What you'll cover
-- Who should book this
-- What to expect
-- Preparation needed
+    - Research similar experts
+    - Consider your experience level
+    - Start moderate, adjust based on demand
+  </Tab>
+</Tabs>
 
-### Competitive Pricing
-
-- Research similar experts
-- Consider your experience level
-- Start moderate, adjust based on demand
-
-## Next Steps
+---
 
 <Cards>
   <Card title="Set Availability" href="/docs/expert/getting-started/availability">
@@ -224,5 +228,3 @@ Include:
     Learn about fees and payment processing
   </Card>
 </Cards>
-
-
