--- a/src/content/docs/expert/en/index.mdx
+++ b/src/content/docs/expert/en/index.mdx
@@ -23,64 +23,99 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
 
 ## How It Works
 
-### For You, the Expert
+<Tabs items={['What We Provide', 'What You Provide']}>
+  <Tab value="What We Provide">
+    **Platform Services**
 
-1. **Apply & Get Verified** - Submit your credentials for review
-2. **Set Up Your Profile** - Create your professional profile
-3. **Configure Services** - Define your consultation offerings
-4. **Start Accepting Patients** - Publish your profile and begin receiving bookings
+    - Booking and scheduling system
+    - Secure payment processing via Stripe
+    - HIPAA-compliant video calls
+    - Patient management tools
+    - Earnings dashboard and payouts
+  </Tab>
+  <Tab value="What You Provide">
+    **Your Expertise**
 
-### What We Provide
-
-- ✅ Booking and scheduling system
-- ✅ Secure payment processing
-- ✅ HIPAA-compliant video calls
-- ✅ Patient management tools
-- ✅ Earnings dashboard and payouts
-
-### What You Provide
-
-- ✅ Your professional expertise
-- ✅ Direct patient care
-- ✅ Clinical documentation (if applicable)
-- ✅ Your professional judgment
+    - Your professional expertise and credentials
+    - Direct patient care
+    - Clinical documentation (if applicable)
+    - Your professional judgment
+    - Professional liability insurance
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  **Important**: Eleva Care provides the technology platform. You, as an independent professional, provide the healthcare services and maintain your own malpractice insurance.
+  Eleva Care provides the technology platform. You, as an independent professional, provide the healthcare services and maintain your own malpractice insurance.
 </Callout>
 
-## Getting Started Checklist
+## Getting Started
 
-Before you can start accepting patients, complete these steps:
+<Steps>
+  <Step>
+    ### Complete Your Profile
 
-- [ ] **Complete your profile** - Add your photo, bio, and credentials
-- [ ] **Set your availability** - Configure your working hours
-- [ ] **Create at least one service** - Define your consultation offerings
-- [ ] **Connect Stripe** - Set up your payout account
-- [ ] **Verify your identity** - Complete identity verification
-- [ ] **Publish your profile** - Make your profile visible to patients
+    Add your photo, bio, credentials, and select your specializations.
+  </Step>
+  <Step>
+    ### Set Your Availability
+
+    Configure your working hours and connect your calendar.
+  </Step>
+  <Step>
+    ### Create Services
+
+    Define your consultation offerings with descriptions and pricing.
+  </Step>
+  <Step>
+    ### Connect Stripe
+
+    Set up your payout account to receive earnings.
+  </Step>
+  <Step>
+    ### Verify Your Identity
+
+    Complete identity and credential verification.
+  </Step>
+  <Step>
+    ### Publish Your Profile
+
+    Make your profile visible to patients and start accepting bookings.
+  </Step>
+</Steps>
 
 ## Expert Tiers
 
-### Community Expert
+<Tabs items={['Community Expert', 'Top Expert']}>
+  <Tab value="Community Expert">
+    **Standard Tier**
 
-Our standard tier for verified professionals:
-- List up to 5 services
-- Basic analytics
-- Weekly payouts
-- Email support
+    Our entry tier for verified professionals:
 
-### Top Expert
+    | Feature | Details |
+    |---------|---------|
+    | Services | Up to 5 active services |
+    | Analytics | Basic performance metrics |
+    | Payouts | Weekly (every Monday) |
+    | Support | Email support (24hr response) |
+    | Commission | 20% (commission-only) or 12% (subscription) |
+  </Tab>
+  <Tab value="Top Expert">
+    **Premium Tier** — Earned through excellence
 
-Earned through excellent performance:
-- Unlimited services
-- Advanced analytics
-- Daily payouts
-- Priority support
-- Featured placement
-- Lower platform fees
+    Unlock premium features and benefits:
 
-[Learn about Top Expert requirements →](/docs/expert/top-expert/requirements)
+    | Feature | Details |
+    |---------|---------|
+    | Services | Unlimited |
+    | Analytics | Advanced insights & forecasting |
+    | Payouts | Daily (available) |
+    | Support | Priority support (4hr response) |
+    | Commission | 15% (commission-only) or 8% (subscription) |
+    | Visibility | Featured placement in search |
+
+    [Learn about Top Expert requirements →](/docs/expert/top-expert/requirements)
+  </Tab>
+</Tabs>
 
 ## Quick Links
 
@@ -103,12 +138,12 @@ Earned through excellent performance:
 
 Our support team is here to help you succeed:
 
-- **Email**: expert-support@eleva.care
-- **Response Time**: Within 24 hours
-- **Expert Community**: Join our private community of healthcare professionals
+| Channel | Details |
+|---------|---------|
+| Email | expert-support@eleva.care |
+| Response Time | Within 24 hours |
+| Community | Private expert community forums |
 
 <Callout type="success">
   Ready to get started? [Set up your profile →](/docs/expert/getting-started/profile)
 </Callout>
-
-
