--- a/src/content/docs/expert/en/top-expert/benefits.mdx
+++ b/src/content/docs/expert/en/top-expert/benefits.mdx
@@ -9,152 +9,132 @@ Top Expert status unlocks premium features and benefits designed to help you gro
 
 ## Financial Benefits
 
-### Lower Platform Fees
+<Tabs items={['Lower Fees', 'Faster Payouts']}>
+  <Tab value="Lower Fees">
+    **Lower Platform Fees**
 
-The most significant benefit—keep more of what you earn:
+    Keep more of what you earn:
 
-| Plan | Community Expert | Top Expert | Savings |
-|------|------------------|------------|---------|
-| Commission-Only | 20% | 15% | 5% per booking |
-| Subscription | 12% | 8% | 4% per booking |
+    | Plan | Community | Top Expert | Savings |
+    |------|-----------|------------|---------|
+    | Commission-Only | 20% | 15% | 5% per booking |
+    | Subscription | 12% | 8% | 4% per booking |
 
-**Example Impact:**
+    **Impact Example:**
 
-On €10,000 in bookings (subscription plan):
-- Community Expert: €8,800 (after 12% fee)
-- Top Expert: €9,200 (after 8% fee)
-- **Annual Savings: €400+ per €10,000**
+    On €10,000 in bookings (subscription plan):
+    - Community Expert: €8,800 (after 12% fee)
+    - Top Expert: €9,200 (after 8% fee)
+    - **Annual Savings: €400+ per €10,000**
+  </Tab>
+  <Tab value="Faster Payouts">
+    **Faster Payout Schedule**
 
-### Faster Payouts
+    | Tier | Payout Schedule |
+    |------|-----------------|
+    | Community | Weekly (Mondays) |
+    | Top Expert | Daily (available) |
 
-| Tier | Payout Schedule |
-|------|-----------------|
-| Community | Weekly (Mondays) |
-| Top Expert | Daily (available) |
-
-Access your earnings faster to manage cash flow better.
+    Access your earnings faster to manage cash flow better.
+  </Tab>
+</Tabs>
 
 ## Visibility Benefits
 
-### Featured Placement
+<Accordions>
+  <Accordion title="Featured Placement">
+    Top Experts receive priority positioning:
 
-Top Experts receive priority positioning:
+    - **Homepage Featured Section** — Showcased to all visitors
+    - **Search Results** — Higher ranking in search
+    - **Category Pages** — Featured in specialty areas
+    - **Recommendation Engine** — Prioritized in suggestions
+  </Accordion>
+  <Accordion title="Top Expert Badge">
+    A distinctive badge on your profile:
 
-- **Homepage Featured Section** - Showcased to all visitors
-- **Search Results** - Higher ranking in search
-- **Category Pages** - Featured in specialty areas
-- **Recommendation Engine** - Prioritized in suggestions
+    - Instant credibility with patients
+    - Visible in search results
+    - Displayed on booking confirmation
+    - Shared in patient communications
+  </Accordion>
+  <Accordion title="Priority Patient Matching">
+    When patients use our matching service:
+
+    - Top Experts shown first
+    - Higher match scores
+    - Featured in recommendations
+  </Accordion>
+</Accordions>
 
 <Callout type="info">
   Featured placement can significantly increase your booking rate. Top Experts typically see 2-3x more profile views than Community Experts.
 </Callout>
 
-### Top Expert Badge
-
-A distinctive badge on your profile:
-
-- Instant credibility with patients
-- Visible in search results
-- Displayed on booking confirmation
-- Shared in patient communications
-
-### Priority in Patient Matching
-
-When patients use our matching service:
-
-- Top Experts shown first
-- Higher match scores
-- Featured in recommendations
-
 ## Feature Access
 
-### Unlimited Services
+<Tabs items={['Services', 'Analytics', 'Customization']}>
+  <Tab value="Services">
+    **Unlimited Services**
 
-| Tier | Service Limit |
-|------|---------------|
-| Community | Up to 5 services |
-| Top Expert | Unlimited |
+    | Tier | Service Limit |
+    |------|---------------|
+    | Community | Up to 5 services |
+    | Top Expert | Unlimited |
 
-Create as many service offerings as your practice needs.
+    Create as many service offerings as your practice needs.
+  </Tab>
+  <Tab value="Analytics">
+    **Advanced Analytics**
 
-### Advanced Analytics
+    Deeper insights into your practice:
 
-Deeper insights into your practice:
+    - **Patient Demographics** — Understand who's booking
+    - **Booking Trends** — Peak times and seasons
+    - **Revenue Forecasting** — Project future earnings
+    - **Conversion Rates** — Profile views to bookings
+    - **Comparative Benchmarks** — How you compare to peers
+  </Tab>
+  <Tab value="Customization">
+    **Custom Branding**
 
-- **Patient Demographics** - Understand who's booking
-- **Booking Trends** - Peak times and seasons
-- **Revenue Forecasting** - Project future earnings
-- **Conversion Rates** - Profile views to bookings
-- **Comparative Benchmarks** - How you compare to peers
+    Personalize your presence:
 
-### Custom Branding
-
-Personalize your presence:
-
-- Custom profile colors
-- Branded booking page
-- Personalized welcome messages
-- Custom service descriptions
-
-### Direct Messaging
-
-Enhanced communication:
-
-- Pre-booking inquiries from patients
-- Direct chat feature
-- Priority message delivery
+    - Custom profile colors
+    - Branded booking page
+    - Personalized welcome messages
+    - Custom service descriptions
+  </Tab>
+</Tabs>
 
 ## Support Benefits
 
-### Priority Support
-
-Skip the queue:
-
-- **Response Time**: Within 4 hours (vs. 24 hours)
-- **Dedicated Channel**: expert-priority@eleva.care
-- **Phone Support**: Available for urgent issues
-
-### Account Manager
-
-For high-volume Top Experts:
-
-- Dedicated point of contact
-- Quarterly business reviews
-- Custom growth strategies
+| Feature | Community | Top Expert |
+|---------|-----------|------------|
+| Response Time | Within 24 hours | Within 4 hours |
+| Email | expert-support@eleva.care | expert-priority@eleva.care |
+| Phone Support | Not available | Available for urgent issues |
+| Account Manager | Not available | For high-volume experts |
 
 ## Coming Soon
 
-### Group Sessions
-
-Host group consultations:
-
-- Webinar-style appointments
-- Multiple patients per session
-- Higher earning potential
-
-### Package Offerings
-
-Sell consultation packages:
-
-- Bundle multiple sessions
-- Offer package discounts
-- Improve patient retention
-
-### API Access
-
-For enterprise Top Experts:
-
-- Integrate with your systems
-- Custom booking flows
-- Automated scheduling
+<Cards>
+  <Card title="Group Sessions" href="#">
+    Host webinar-style appointments with multiple patients per session for higher earning potential.
+  </Card>
+  <Card title="Package Offerings" href="#">
+    Sell consultation packages with bundle discounts to improve patient retention.
+  </Card>
+  <Card title="API Access" href="#">
+    Integrate with your systems, create custom booking flows, and automate scheduling.
+  </Card>
+</Cards>
 
 ## Value Comparison
 
 ### ROI of Top Expert Status
 
-Consider a typical scenario:
-
-**Monthly Activity:**
+**Monthly Activity Example:**
 - 40 appointments
 - Average €100 per appointment
 - €4,000 gross revenue
@@ -168,10 +148,10 @@ Consider a typical scenario:
 
 **Monthly Benefit: €160**
 
-Plus:
+Plus indirect benefits:
 - More bookings from featured placement
 - Faster access to earnings
-- Better tools to grow practice
+- Better tools to grow your practice
 
 ## How to Qualify
 
@@ -179,33 +159,20 @@ Top Expert status is earned, not purchased.
 
 ### Requirements Summary
 
-- ⭐ 4.8+ average rating
-- 📅 25+ appointments per quarter
-- ✅ Less than 5% cancellation rate
-- 💬 90%+ response rate
-- 📆 3+ months as Community Expert
-- 🗓️ 80%+ availability consistency
+| Criteria | Target |
+|----------|--------|
+| Average Rating | 4.8+ stars |
+| Appointments (90 days) | 25+ completed |
+| Cancellation Rate | Under 5% |
+| Response Rate | 90%+ within 24hr |
+| Experience | 3+ months active |
+| Availability | 80%+ days active |
 
 ### Evaluation Schedule
 
-Quarterly evaluations:
-- January 1, April 1, July 1, October 1
+Quarterly evaluations: January 1, April 1, July 1, October 1
 
-[See full requirements →](/docs/expert/top-expert/requirements)
-
-## Success Stories
-
-### Dr. Maria Santos, PT, PhD
-
-> "Becoming a Top Expert transformed my practice. The featured placement brought in 3x more patients, and the lower fees meant I kept more of my earnings. It's been incredible."
-
-### Dr. João Rodrigues, OB-GYN
-
-> "The advanced analytics helped me understand when patients were most likely to book. I adjusted my availability and saw a 40% increase in appointments."
-
-## Start Your Journey
-
-Ready to work toward Top Expert status?
+---
 
 <Cards>
   <Card title="See Requirements" href="/docs/expert/top-expert/requirements">
@@ -218,5 +185,3 @@ Ready to work toward Top Expert status?
     Maximize bookings
   </Card>
 </Cards>
-
-
