--- a/src/content/docs/expert/pt/getting-started/profile.mdx
+++ b/src/content/docs/expert/pt/getting-started/profile.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configurar o Seu Perfil
-description: Crie um perfil profissional que atraia pacientes e demonstre a sua expertise.
+description: Crie um perfil profissional que atraia pacientes e mostre a sua expertise.
 ---
 
 # Configurar o Seu Perfil
@@ -9,38 +9,59 @@ O seu perfil é a sua presença digital na Eleva Care. Um perfil completo e prof
 
 ## Elementos do Perfil
 
-### Informação Obrigatória
+<Tabs items={['Obrigatório', 'Opcional']}>
+  <Tab value="Obrigatório">
+    **Informação Obrigatória**
 
-Estes campos devem ser completados antes de poder publicar:
+    Estes campos devem ser completados antes de publicar:
 
-| Campo | Descrição | Dicas |
-|-------|-----------|-------|
-| **Nome de Exibição** | O seu nome profissional | Use o seu nome com credenciais (ex: "Dra. Maria Santos, FT, PhD") |
-| **Foto de Perfil** | Fotografia profissional | Alta qualidade, simpática, roupa profissional |
-| **Bio** | 100-1000 caracteres | Destaque a sua expertise e abordagem |
-| **Especializações** | Áreas de expertise | Selecione todas as aplicáveis |
-| **Idiomas** | Idiomas que fala | Importante para pacientes internacionais |
+    | Campo | Descrição | Dicas |
+    |-------|-----------|-------|
+    | Nome de Apresentação | O seu nome profissional | Inclua credenciais (ex: "Dra. Maria Santos, PT, PhD") |
+    | Foto de Perfil | Foto profissional | Alta qualidade, simpática, vestuário profissional |
+    | Bio | 100-1000 caracteres | Destaque a sua expertise e abordagem |
+    | Especializações | Áreas de expertise | Selecione todas aplicáveis |
+    | Idiomas | Idiomas que fala | Importante para pacientes internacionais |
+  </Tab>
+  <Tab value="Opcional">
+    **Informação Opcional**
 
-### Informação Opcional
+    Melhore o seu perfil com:
 
-Melhore o seu perfil com:
-
-- Anos de experiência
-- Educação e certificações
-- Associações profissionais
-- Localização (cidade/país)
-- Links de redes sociais (LinkedIn, website)
+    - Anos de experiência
+    - Educação e certificações
+    - Associações profissionais
+    - Localização (cidade/país)
+    - Links de redes sociais (LinkedIn, website)
+  </Tab>
+</Tabs>
 
 ## Escrever a Sua Bio
 
-A sua bio é muitas vezes a primeira coisa que os pacientes leem. Faça-a contar.
+A sua bio é frequentemente a primeira coisa que os pacientes leem. Faça-a contar.
 
-### Estrutura
+<Steps>
+  <Step>
+    ### Abertura
 
-1. **Abertura** - A sua especialidade e experiência
-2. **Abordagem** - Como trabalha com pacientes
-3. **Formação** - Credenciais e formação principais
-4. **Toque Pessoal** - Porque é apaixonado por este trabalho
+    Comece com a sua especialidade e anos de experiência.
+  </Step>
+  <Step>
+    ### Abordagem
+
+    Descreva como trabalha com pacientes e a sua filosofia de cuidados.
+  </Step>
+  <Step>
+    ### Background
+
+    Destaque credenciais-chave, formação e certificações.
+  </Step>
+  <Step>
+    ### Toque Pessoal
+
+    Partilhe porque é apaixonado por este trabalho.
+  </Step>
+</Steps>
 
 ### Exemplo de Bio
 
@@ -48,123 +69,136 @@ A sua bio é muitas vezes a primeira coisa que os pacientes leem. Faça-a contar
 >
 > A minha abordagem combina técnicas baseadas em evidências com cuidados compassivos, garantindo que cada paciente se sente ouvida e apoiada ao longo da sua jornada.
 >
-> Tenho um Doutoramento em Fisioterapia da Saúde da Mulher pela Universidade de Lisboa e sou certificada em técnicas de biofeedback e terapia manual."
+> Tenho um doutoramento em Fisioterapia de Saúde da Mulher pela Universidade de Lisboa e sou certificada em biofeedback e técnicas de terapia manual."
 
-<Callout type="tip">
-  **Dica Pro**: Escreva na primeira pessoa ("Especializo-me em...") para criar uma ligação pessoal com potenciais pacientes.
+<Callout type="info">
+  Escreva na primeira pessoa ("Especializo-me em...") para criar uma conexão pessoal com potenciais pacientes.
 </Callout>
 
 ## Diretrizes para Foto de Perfil
 
-A sua foto tem um impacto significativo na confiança do paciente. Siga estas diretrizes:
+<Tabs items={['Recomendado', 'Evitar']}>
+  <Tab value="Recomendado">
+    **Boas Práticas**
 
-### Fazer
+    - Use uma foto recente e de alta resolução
+    - Vista-se profissionalmente (como faria para uma consulta)
+    - Escolha um fundo neutro ou profissional
+    - Sorria naturalmente — pareça acessível
+    - Assegure boa iluminação (luz natural funciona melhor)
+  </Tab>
+  <Tab value="Evitar">
+    **O Que Não Fazer**
 
-- ✅ Use uma foto recente e de alta resolução
-- ✅ Vista-se profissionalmente (como numa consulta)
-- ✅ Escolha um fundo neutro ou profissional
-- ✅ Sorria naturalmente - pareça acessível
-- ✅ Garanta boa iluminação (luz natural funciona melhor)
-
-### Não Fazer
-
-- ❌ Usar fotos de grupo ou fotos com outras pessoas
-- ❌ Usar fotos muito filtradas ou editadas
-- ❌ Usar fotos casuais de férias ou sociais
-- ❌ Usar logos ou gráficos em vez da sua foto
+    - Fotos de grupo ou com outras pessoas
+    - Fotos muito filtradas ou editadas
+    - Fotos casuais de férias ou sociais
+    - Logótipos ou gráficos em vez da sua foto
+  </Tab>
+</Tabs>
 
 ## Selecionar Especializações
 
-Escolha especializações que reflitam com precisão a sua expertise:
-
-### Categorias Principais
-
-- **Gravidez & Parto** - Cuidados pré-natais, preparação para o parto
-- **Pós-Parto** - Recuperação, apoio à amamentação
-- **Saúde Pélvica** - Incontinência, prolapso, dor pélvica
-- **Menopausa** - Saúde hormonal, gestão de sintomas
-- **Saúde Sexual** - Disfunção, aconselhamento
-- **Saúde Mental** - Saúde mental perinatal, ansiedade, depressão
-
-### Sub-especializações
-
-Cada categoria tem sub-especializações específicas. Selecione apenas aquelas onde tem formação e experiência.
+<Accordions>
+  <Accordion title="Gravidez e Parto">
+    Cuidados pré-natais, preparação para o parto e consultas relacionadas com a gravidez.
+  </Accordion>
+  <Accordion title="Pós-Parto">
+    Recuperação, apoio à amamentação e cuidados do quarto trimestre.
+  </Accordion>
+  <Accordion title="Saúde Pélvica">
+    Incontinência, prolapso, dor pélvica e reabilitação.
+  </Accordion>
+  <Accordion title="Menopausa">
+    Saúde hormonal e gestão de sintomas.
+  </Accordion>
+  <Accordion title="Saúde Sexual">
+    Disfunção, aconselhamento e bem-estar.
+  </Accordion>
+  <Accordion title="Saúde Mental">
+    Saúde mental perinatal, ansiedade e depressão.
+  </Accordion>
+</Accordions>
 
 <Callout type="warning">
-  Selecione apenas especializações onde está qualificado para prestar cuidados. Os pacientes confiam que as especializações listadas representam a sua expertise real.
+  Selecione apenas especializações onde está qualificado para fornecer cuidados. Os pacientes confiam que as especializações listadas representam a sua expertise real.
 </Callout>
 
-## Credenciais & Verificação
+## Credenciais e Verificação
 
-### Documentos Obrigatórios
+### Documentos Necessários
 
-Para publicar o seu perfil, deve verificar:
+<Steps>
+  <Step>
+    ### Verificação de Identidade
 
-1. **Identidade** - Documento de identificação oficial
-2. **Licença Profissional** - Licença atual e válida na sua área
-3. **Seguro** - Prova de cobertura de responsabilidade profissional
+    Carregue um documento de identificação oficial.
+  </Step>
+  <Step>
+    ### Licença Profissional
 
-### Processo de Verificação
+    Forneça a sua licença atual e válida na sua área.
+  </Step>
+  <Step>
+    ### Comprovativo de Seguro
 
-1. Carregue documentos no seu painel
-2. A nossa equipa revê dentro de 2-3 dias úteis
-3. Receba email de confirmação quando aprovado
-4. Perfil elegível para publicação
+    Submeta comprovativo de cobertura de responsabilidade profissional.
+  </Step>
+  <Step>
+    ### Processo de Revisão
+
+    A nossa equipa revê em 2-3 dias úteis e envia confirmação quando aprovado.
+  </Step>
+</Steps>
 
 ## Publicar o Seu Perfil
 
-Quando todos os elementos obrigatórios estiverem completos:
+<Steps>
+  <Step>
+    ### Rever Informação
 
-1. Vá a **Painel do Especialista** > **Perfil**
-2. Reveja toda a informação
-3. Clique em **Publicar Perfil**
-4. O seu perfil torna-se visível para pacientes
+    Vá a **Dashboard de Especialista** → **Perfil** e reveja todas as secções.
+  </Step>
+  <Step>
+    ### Publicar
 
-### Despublicar
+    Clique em **Publicar Perfil** para tornar o seu perfil visível aos pacientes.
+  </Step>
+  <Step>
+    ### Gerir Visibilidade
 
-Pode despublicar o seu perfil a qualquer momento:
+    Alterne **Visibilidade do Perfil** nas definições a qualquer momento. Marcações existentes não são afetadas.
+  </Step>
+</Steps>
 
-1. Vá a **Definições do Perfil**
-2. Desative **Visibilidade do Perfil**
-3. As consultas existentes não são afetadas
+## Boas Práticas
 
-## Editar o Seu Perfil
+<Tabs items={['Destacar-se', 'Manter Atualizado']}>
+  <Tab value="Destacar-se">
+    **Diferencie-se**
 
-Pode atualizar o seu perfil a qualquer momento:
+    - Use uma bio única e memorável
+    - Destaque formação ou certificações específicas
+    - Mencione idiomas falados
+    - Descreva a sua abordagem aos cuidados
+  </Tab>
+  <Tab value="Manter Atualizado">
+    **Mantenha Atualizado**
 
-1. Vá a **Painel do Especialista** > **Perfil**
-2. Clique em **Editar** em qualquer secção
-3. Faça as suas alterações
-4. Clique em **Guardar**
+    - Reveja o seu perfil trimestralmente
+    - Atualize credenciais quando renovadas
+    - Adicione novas especializações à medida que ganha expertise
+    - Renove a sua foto a cada 2-3 anos
+  </Tab>
+</Tabs>
 
-As alterações refletem-se imediatamente no seu perfil público.
-
-## Melhores Práticas
-
-### Destaque-se dos Outros
-
-- Use uma bio única e memorável
-- Destaque formação ou certificações específicas
-- Mencione idiomas falados
-- Inclua a sua abordagem aos cuidados do paciente
-
-### Mantenha Atualizado
-
-- Reveja o seu perfil trimestralmente
-- Atualize credenciais quando renovadas
-- Adicione novas especializações à medida que ganha expertise
-- Atualize a sua foto a cada 2-3 anos
-
-## Próximos Passos
-
-Quando o seu perfil estiver configurado:
+---
 
 <Cards>
   <Card title="Criar Serviços" href="/docs/expert/getting-started/services">
     Defina as suas ofertas de consulta
   </Card>
   <Card title="Definir Disponibilidade" href="/docs/expert/getting-started/availability">
-    Configure as suas horas de trabalho
+    Configure os seus horários de trabalho
   </Card>
 </Cards>
-
