--- a/src/content/docs/patient/pt/booking.mdx
+++ b/src/content/docs/patient/pt/booking.mdx
@@ -1,131 +1,180 @@
 ---
-title: Como Marcar uma Consulta
+title: Como Marcar Consulta
 description: Guia passo a passo para encontrar e marcar consultas com especialistas em saúde feminina na Eleva Care.
 ---
 
 # Como Marcar uma Consulta
 
-Marcar uma consulta na Eleva Care é simples e demora apenas alguns minutos. Siga este guia para encontrar o especialista certo e agendar a sua consulta.
+Marcar uma consulta na Eleva Care é simples e leva apenas alguns minutos. Segue este guia para encontrar o especialista certo e agendar a tua consulta.
 
 ## Encontrar um Especialista
 
-### Pesquisar por Especialidade
+### Explorar por Especialidade
 
-Os nossos especialistas são especializados em diferentes áreas da saúde feminina:
+<Tabs items={['Gravidez', 'Pós-Parto', 'Saúde Pélvica', 'Menopausa', 'Saúde Sexual']}>
+  <Tab value="Gravidez">
+    **Gravidez e Preparação para o Parto**
 
-- **Gravidez & Preparação para o Parto** - Fisioterapeutas, obstetras, parteiras
-- **Recuperação Pós-Parto** - Especialistas em pavimento pélvico, profissionais de saúde mental
-- **Saúde Pélvica** - Especialistas em incontinência, prolapso, dor pélvica
-- **Menopausa & Saúde Hormonal** - Endocrinologistas, nutricionistas
-- **Saúde Sexual** - Terapeutas, conselheiros, especialistas médicos
+    Fisioterapeutas, obstetras e parteiras especializadas em cuidados pré-natais e preparação para o parto.
+  </Tab>
+  <Tab value="Pós-Parto">
+    **Recuperação Pós-Parto**
 
-### Usar Filtros
+    Especialistas em pavimento pélvico e profissionais de saúde mental que apoiam a tua jornada de recuperação.
+  </Tab>
+  <Tab value="Saúde Pélvica">
+    **Saúde Pélvica**
 
-Refine a sua pesquisa com filtros:
+    Especialistas em incontinência, prolapso e gestão de dor pélvica.
+  </Tab>
+  <Tab value="Menopausa">
+    **Menopausa e Saúde Hormonal**
 
-- **Localização** - Encontre especialistas na sua região ou que ofereçam consultas remotas
-- **Idioma** - Filtre por idioma falado
-- **Disponibilidade** - Mostre apenas especialistas com consultas disponíveis
-- **Avaliação** - Ordene por avaliações de pacientes
+    Endocrinologistas e nutricionistas que te orientam através das transições hormonais.
+  </Tab>
+  <Tab value="Saúde Sexual">
+    **Saúde Sexual**
 
-## Agendar a Sua Consulta
+    Terapeutas, conselheiros e especialistas médicos que fornecem cuidados compassivos.
+  </Tab>
+</Tabs>
 
-### Passo 1: Selecione um Horário
+### Refinar a Pesquisa
 
-1. Clique no perfil do especialista
-2. Veja os horários disponíveis
-3. Selecione uma data e hora que lhe convenha
+Usa filtros para encontrar o especialista ideal:
 
-### Passo 2: Confirme os Seus Dados
+| Filtro | Descrição |
+|--------|-----------|
+| Localização | Encontra especialistas na tua região ou que oferecem consultas remotas |
+| Idioma | Filtra por idiomas falados |
+| Disponibilidade | Mostra apenas especialistas com vagas |
+| Avaliação | Ordena por avaliações de pacientes |
 
-1. Reveja o tipo de consulta (videochamada ou presencial)
-2. Confirme a duração e o preço
-3. Adicione notas para o especialista (opcional)
+## Processo de Marcação
 
-### Passo 3: Complete o Pagamento
+<Steps>
+  <Step>
+    ### Selecionar Horário
 
-1. Escolha o seu método de pagamento
-2. Introduza os dados de pagamento
-3. Confirme a sua marcação
+    Clica no perfil do especialista, vê os horários disponíveis e seleciona uma data e hora conveniente.
+  </Step>
+  <Step>
+    ### Confirmar Detalhes
+
+    Revê o tipo de consulta (videochamada ou presencial), confirma a duração e preço, e adiciona notas para o especialista.
+  </Step>
+  <Step>
+    ### Completar Pagamento
+
+    Escolhe o método de pagamento, introduz os dados e confirma a marcação.
+  </Step>
+</Steps>
 
 <Callout type="success">
-  Receberá um email de confirmação com todos os detalhes da sua consulta.
+  Receberás um email de confirmação com todos os detalhes da tua consulta, incluindo o link para videochamada se aplicável.
 </Callout>
 
-## Gerir as Suas Consultas
+## Gerir Consultas
 
-### Ver Consultas Agendadas
+<Accordions>
+  <Accordion title="Ver Consultas Agendadas">
+    Acede às tuas consultas através do painel de paciente:
 
-Aceda às suas consultas a partir do painel do paciente:
+    1. Vai a **Minhas Consultas**
+    2. Vê consultas futuras e passadas
+    3. Acede aos links de videochamada quando for altura
+  </Accordion>
+  <Accordion title="Reagendar">
+    Precisas de mudar o horário?
 
-1. Vá a **As Minhas Consultas**
-2. Veja consultas futuras e passadas
-3. Aceda aos links de videochamada quando chegar a hora
+    1. Vai aos detalhes da consulta
+    2. Clica em **Reagendar**
+    3. Seleciona um novo horário
+    4. Confirma a alteração
 
-### Reagendar
+    <Callout type="warning">
+      Por favor reagenda com pelo menos 24 horas de antecedência para evitar taxas de cancelamento.
+    </Callout>
+  </Accordion>
+  <Accordion title="Cancelar uma Consulta">
+    Se precisares de cancelar:
 
-Precisa de alterar o horário da sua consulta?
+    1. Vai aos detalhes da consulta
+    2. Clica em **Cancelar Consulta**
+    3. Confirma o cancelamento
 
-1. Vá aos detalhes da consulta
-2. Clique em **Reagendar**
-3. Selecione um novo horário
-4. Confirme a alteração
+    As políticas de reembolso variam por especialista. Verifica a política de cancelamento antes de marcar.
+  </Accordion>
+</Accordions>
 
-<Callout type="warning">
-  **Política de Cancelamento**: Por favor, reagende com pelo menos 24 horas de antecedência para evitar taxas de cancelamento.
-</Callout>
+## Participar na Consulta
 
-### Cancelar uma Consulta
+<Tabs items={['Videochamada', 'Presencial']}>
+  <Tab value="Videochamada">
+    **Consultas por Vídeo**
 
-Se precisar de cancelar:
+    <Steps>
+      <Step>
+        ### Preparação
 
-1. Vá aos detalhes da consulta
-2. Clique em **Cancelar Consulta**
-3. Confirme o cancelamento
+        Receberás um email de lembrete 24 horas antes com o link para entrar.
+      </Step>
+      <Step>
+        ### Entrar na Chamada
 
-As políticas de reembolso variam por especialista. Verifique a política de cancelamento do especialista antes de marcar.
+        Clica no botão **Entrar na Chamada** 5 minutos antes da hora marcada.
+      </Step>
+      <Step>
+        ### Configuração Técnica
 
-## Participar na Sua Consulta
+        Certifica-te que a câmara e microfone funcionam e tens ligação estável à internet.
+      </Step>
+    </Steps>
+  </Tab>
+  <Tab value="Presencial">
+    **Consultas Presenciais**
 
-### Consultas por Vídeo
+    <Steps>
+      <Step>
+        ### Verificar Localização
 
-Para consultas por vídeo:
+        Revê os detalhes da localização no email de confirmação.
+      </Step>
+      <Step>
+        ### Chegar Cedo
 
-1. Receberá um email de lembrete 24 horas antes
-2. Clique no botão **Entrar na Chamada** 5 minutos antes da sua consulta
-3. Certifique-se de que a sua câmara e microfone estão a funcionar
-4. Tenha uma ligação à internet estável
+        Planeia chegar 10 minutos antes da hora marcada.
+      </Step>
+      <Step>
+        ### Trazer Documentos
 
-### Consultas Presenciais
+        Traz registos médicos ou resultados de exames relevantes.
+      </Step>
+    </Steps>
+  </Tab>
+</Tabs>
 
-Para visitas presenciais:
+## Após a Consulta
 
-1. Verifique os detalhes da localização no seu email de confirmação
-2. Chegue 10 minutos mais cedo
-3. Traga quaisquer registos médicos relevantes
+### Deixar Avaliação
 
-## Após a Sua Consulta
+Ajuda outros pacientes partilhando a tua experiência:
 
-### Deixar uma Avaliação
+1. Vai a **Minhas Consultas** → **Passadas**
+2. Clica em **Deixar Avaliação**
+3. Avalia a experiência e adiciona comentários
 
-Ajude outros pacientes partilhando a sua experiência:
+### Marcar Seguimento
 
-1. Vá a **As Minhas Consultas** > **Passadas**
-2. Clique em **Deixar Avaliação**
-3. Avalie a sua experiência e adicione comentários
+Muitos pacientes beneficiam de cuidados contínuos. Visita o perfil do especialista para marcar outra consulta e referencia a consulta anterior nas notas.
 
-### Marcar uma Consulta de Seguimento
+---
 
-Muitos pacientes beneficiam de cuidados contínuos:
-
-1. Visite o perfil do especialista
-2. Marque outra consulta
-3. Referencie a sua consulta anterior nas notas
-
-## Precisa de Ajuda?
-
-Se tiver questões sobre marcações:
-
-- **Email**: support@eleva.care
-- **Centro de Ajuda**: [FAQ](/docs/patient/faq)
-
+<Cards>
+  <Card title="Opções de Pagamento" href="/docs/patient/payments">
+    Conhece os métodos de pagamento aceites e preços
+  </Card>
+  <Card title="FAQ" href="/docs/patient/faq">
+    Respostas a perguntas comuns
+  </Card>
+</Cards>
