--- a/src/content/docs/patient/pt/reviews.mdx
+++ b/src/content/docs/patient/pt/reviews.mdx
@@ -1,179 +1,215 @@
 ---
-title: Avaliações & Classificações
-description: Como deixar avaliações para especialistas e entender as classificações na Eleva Care.
+title: Avaliações e Classificações
+description: Como deixar avaliações para especialistas e compreender as classificações na Eleva Care.
 ---
 
-# Avaliações & Classificações
+# Avaliações e Classificações
 
-O seu feedback ajuda outros pacientes a encontrar o especialista certo e ajuda os especialistas a melhorar os seus serviços. Saiba como funciona o nosso sistema de avaliações.
+O teu feedback ajuda outros pacientes a encontrar o especialista certo e ajuda os especialistas a melhorar os seus serviços. Aprende como funciona o nosso sistema de avaliações.
 
 ## Deixar uma Avaliação
 
-### Quando Pode Avaliar?
+Podes deixar uma avaliação após a conclusão da tua consulta. Receberás um email de lembrete nas 24 horas seguintes.
 
-Pode deixar uma avaliação após a conclusão da sua consulta. Receberá um email de lembrete dentro de 24 horas.
+<Steps>
+  <Step>
+    ### Aceder a Consultas Passadas
 
-### Como Deixar uma Avaliação
+    Vai a **Minhas Consultas** → **Passadas** no teu portal de paciente.
+  </Step>
+  <Step>
+    ### Selecionar a Consulta
 
-1. Vá a **As Minhas Consultas** > **Passadas**
-2. Encontre a consulta concluída
-3. Clique em **Deixar Avaliação**
-4. Avalie a sua experiência (1-5 estrelas)
-5. Adicione feedback escrito (opcional mas encorajado)
-6. Submeta a sua avaliação
+    Encontra a consulta concluída que queres avaliar.
+  </Step>
+  <Step>
+    ### Avaliar a Experiência
+
+    Clica em **Deixar Avaliação** e classifica de 1 a 5 estrelas.
+  </Step>
+  <Step>
+    ### Adicionar Feedback
+
+    Escreve sobre a tua experiência (opcional mas encorajado).
+  </Step>
+</Steps>
 
 ### Diretrizes de Avaliação
 
-Para garantir avaliações úteis:
+<Tabs items={['Recomendado', 'Evitar']}>
+  <Tab value="Recomendado">
+    **Boas Práticas**
 
-**Faça:**
+    - Sê específica sobre a tua experiência
+    - Menciona o que foi particularmente útil
+    - Partilha feedback construtivo
+    - Mantém comentários profissionais
+  </Tab>
+  <Tab value="Evitar">
+    **Por Favor Evita**
 
-- Seja específico sobre a sua experiência
-- Mencione o que foi útil
-- Partilhe feedback construtivo
-- Mantenha um tom profissional
-
-**Não Faça:**
-
-- Incluir detalhes médicos pessoais
-- Usar linguagem ofensiva
-- Partilhar informações privadas do especialista
-- Avaliar consultas que não compareceu
+    - Incluir detalhes médicos pessoais
+    - Usar linguagem ofensiva
+    - Partilhar informação privada do especialista
+    - Avaliar consultas que não frequentaste
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  As avaliações são moderadas para garantir que seguem as nossas diretrizes da comunidade. A maioria das avaliações é publicada dentro de 24 horas.
+  As avaliações são moderadas para garantir que seguem as nossas diretrizes comunitárias. A maioria das avaliações é publicada em 24 horas.
 </Callout>
 
-## Entender as Classificações
+## Compreender as Classificações
 
-### Classificação por Estrelas
+### Sistema de Estrelas
 
-O nosso sistema de classificação de 5 estrelas:
+| Classificação | Significado |
+|---------------|-------------|
+| 5 Estrelas | Excelente - Excedeu expectativas |
+| 4 Estrelas | Muito Bom - Correspondeu às expectativas |
+| 3 Estrelas | Bom - Margem para melhoria |
+| 2 Estrelas | Razoável - Alguns problemas |
+| 1 Estrela | Fraco - Problemas significativos |
 
-| Estrelas | Significado |
-|----------|-------------|
-| ⭐⭐⭐⭐⭐ (5) | Excelente - Superou as expectativas |
-| ⭐⭐⭐⭐ (4) | Muito Bom - Correspondeu às expectativas |
-| ⭐⭐⭐ (3) | Bom - Margem para melhoria |
-| ⭐⭐ (2) | Razoável - Alguns problemas |
-| ⭐ (1) | Fraco - Problemas significativos |
+### Critérios de Avaliação
 
-### O Que Avaliamos
+Ao deixar uma avaliação, considera estes aspetos:
 
-Ao deixar uma avaliação, considere:
-
-- **Comunicação** - O especialista foi claro e fácil de entender?
-- **Profissionalismo** - A consulta foi conduzida de forma profissional?
-- **Competência** - O especialista demonstrou conhecimento na sua área?
-- **Utilidade** - Recebeu orientação útil?
-- **Pontualidade** - A consulta começou a horas?
+<Accordions>
+  <Accordion title="Comunicação">
+    O especialista foi claro e fácil de compreender? Explicou as coisas de forma que pudesses seguir?
+  </Accordion>
+  <Accordion title="Profissionalismo">
+    A consulta foi conduzida profissionalmente? Sentiste-te respeitada e ouvida?
+  </Accordion>
+  <Accordion title="Competência">
+    O especialista demonstrou conhecimento na sua área? Conseguiu responder às tuas perguntas?
+  </Accordion>
+  <Accordion title="Utilidade">
+    Recebeste orientação útil? Tens um caminho claro a seguir?
+  </Accordion>
+  <Accordion title="Pontualidade">
+    A consulta começou a horas? O teu tempo foi respeitado?
+  </Accordion>
+</Accordions>
 
 ### Distintivos de Especialistas
 
-Os especialistas podem ganhar distintivos com base no desempenho:
+Os especialistas podem ganhar distintivos de reconhecimento baseados no desempenho:
 
-- **Top Expert** - Avaliações consistentemente altas (4.8+ de média)
-- **Resposta Rápida** - Responde a pedidos dentro de 24 horas
-- **Altamente Recomendado** - Alta percentagem de marcações repetidas
+| Distintivo | Critérios |
+|------------|-----------|
+| Top Expert | Avaliações consistentemente altas (4.8+ média) |
+| Resposta Rápida | Responde a inquéritos em 24 horas |
+| Altamente Recomendado | Alta percentagem de marcações repetidas |
 
 ## Ler Avaliações
 
 ### Encontrar Avaliações
 
-Veja as avaliações dos especialistas na página de perfil:
+Vê as avaliações dos especialistas diretamente na página de perfil:
 
-1. Vá ao perfil do especialista
-2. Deslize até à secção **Avaliações**
-3. Leia o feedback dos pacientes
-4. Filtre por classificação ou data
+1. Navega para o perfil do especialista
+2. Desliza até à secção **Avaliações**
+3. Lê o feedback dos pacientes
+4. Filtra por classificação ou data
 
-### Avaliações Verificadas
-
-Todas as avaliações na Eleva Care são de pacientes verificados que completaram uma consulta. Isto garante feedback autêntico.
+<Callout>
+  Todas as avaliações na Eleva Care são de pacientes verificados que completaram uma consulta. Isto garante feedback autêntico e confiável.
+</Callout>
 
 ### Estatísticas de Avaliações
 
 Cada perfil de especialista mostra:
 
-- Classificação geral por estrelas
+- Classificação geral em estrelas
 - Número total de avaliações
-- Discriminação da classificação por categoria
+- Análise de classificações por categoria
 - Destaques de avaliações recentes
 
-## Editar ou Remover Avaliações
+## Gerir as Tuas Avaliações
 
-### Editar a Sua Avaliação
+<Accordions>
+  <Accordion title="Editar a Tua Avaliação">
+    Cometeste um erro? Podes editar a tua avaliação em 7 dias:
 
-Cometeu um erro? Pode editar a sua avaliação dentro de 7 dias:
+    1. Vai a **Minhas Avaliações** no portal de paciente
+    2. Encontra a avaliação que queres editar
+    3. Clica em **Editar** e faz as alterações
+    4. Guarda as atualizações
+  </Accordion>
+  <Accordion title="Apagar a Tua Avaliação">
+    Para remover a tua avaliação:
 
-1. Vá a **As Minhas Avaliações** no seu portal de paciente
-2. Encontre a avaliação
-3. Clique em **Editar**
-4. Faça as suas alterações
-5. Guarde
+    1. Vai a **Minhas Avaliações**
+    2. Clica em **Apagar** na avaliação
+    3. Confirma a eliminação
 
-### Pedir Remoção
+    <Callout type="warning">
+      Uma vez apagada, a tua avaliação não pode ser recuperada. Podes deixar uma nova avaliação se desejares.
+    </Callout>
+  </Accordion>
+  <Accordion title="Respostas de Especialistas">
+    Os especialistas podem responder a avaliações. Se um especialista responder:
 
-Para remover a sua avaliação:
-
-1. Vá a **As Minhas Avaliações**
-2. Clique em **Eliminar** na avaliação
-3. Confirme a eliminação
-
-<Callout type="warning">
-  Uma vez eliminada, a sua avaliação não pode ser recuperada. Pode deixar uma nova avaliação se desejar.
-</Callout>
-
-## Responder a Respostas de Especialistas
-
-Os especialistas podem responder às avaliações. Se um especialista responder à sua avaliação:
-
-1. Receberá uma notificação
-2. Veja a resposta na página da avaliação
-3. Não pode responder às respostas
+    - Receberás uma notificação
+    - Vê a resposta na página da avaliação
+    - As respostas são visíveis para todos os utilizadores
+  </Accordion>
+</Accordions>
 
 ## Reportar Preocupações
 
 ### Avaliações Inapropriadas
 
-Se vir uma avaliação que viola as nossas diretrizes:
+Se vires uma avaliação que viola as nossas diretrizes:
 
-1. Clique em **Reportar** na avaliação
-2. Selecione o motivo
-3. Submeta o seu relatório
+<Steps>
+  <Step>
+    ### Reportar a Avaliação
 
-Investigaremos e tomaremos medidas se necessário.
+    Clica em **Reportar** na avaliação em questão.
+  </Step>
+  <Step>
+    ### Selecionar Motivo
 
-### Resolução de Conflitos
+    Escolhe o motivo mais apropriado para o reporte.
+  </Step>
+  <Step>
+    ### Submeter
 
-Se tiver uma preocupação séria sobre um especialista:
+    A nossa equipa investigará e tomará medidas se necessário.
+  </Step>
+</Steps>
 
-1. Contacte support@eleva.care
-2. Forneça detalhes do problema
-3. A nossa equipa investigará
+### Preocupações Sérias
 
-## FAQ
+Para problemas significativos com um especialista, contacta support@eleva.care diretamente com detalhes da tua preocupação. A nossa equipa investigará prontamente.
 
-### As avaliações são anónimas?
+## Perguntas Frequentes
 
-As avaliações mostram o seu primeiro nome e inicial do apelido (ex: "Maria S."). O seu nome completo não é exibido.
+<Accordions>
+  <Accordion title="As avaliações são anónimas?">
+    As avaliações mostram o teu primeiro nome e inicial do apelido (ex: "Maria S."). O teu nome completo não é apresentado publicamente.
+  </Accordion>
+  <Accordion title="Os especialistas podem ver quem deixou avaliações negativas?">
+    Os especialistas podem ver o primeiro nome e inicial de todos os avaliadores, independentemente da classificação.
+  </Accordion>
+  <Accordion title="Quanto tempo ficam as avaliações visíveis?">
+    As avaliações permanecem visíveis indefinidamente a menos que as apagues ou violem as nossas diretrizes.
+  </Accordion>
+  <Accordion title="Posso avaliar se o especialista cancelou?">
+    Não, as avaliações só podem ser deixadas para consultas concluídas.
+  </Accordion>
+</Accordions>
 
-### Os especialistas podem ver quem deixou avaliações negativas?
+---
 
-Os especialistas podem ver o primeiro nome e inicial de todos os avaliadores, independentemente da classificação.
-
-### Quanto tempo ficam as avaliações visíveis?
-
-As avaliações permanecem visíveis indefinidamente, a menos que as elimine ou violem as nossas diretrizes.
-
-### Posso avaliar se o especialista cancelou?
-
-Não, as avaliações só podem ser deixadas para consultas concluídas.
-
-## Precisa de Ajuda?
-
-Para questões sobre avaliações:
-
-- **Email**: support@eleva.care
-- **Centro de Ajuda**: [FAQ](/docs/patient/faq)
-
+<Cards>
+  <Card title="Como Marcar" href="/docs/patient/booking">
+    Agenda a tua próxima consulta
+  </Card>
+  <Card title="FAQ" href="/docs/patient/faq">
+    Mais perguntas frequentes
+  </Card>
+</Cards>
