--- a/src/content/docs/expert/en/earnings/pricing.mdx
+++ b/src/content/docs/expert/en/earnings/pricing.mdx
@@ -9,185 +9,172 @@ Setting the right price is crucial for building a successful practice on Eleva C
 
 ## Pricing Principles
 
-### Value-Based Pricing
+<Tabs items={['Value-Based', 'Market Position']}>
+  <Tab value="Value-Based">
+    **Value-Based Pricing**
 
-Price based on the value you provide, not just time spent:
+    Price based on the value you provide, not just time spent:
 
-- Your expertise and credentials
-- Patient outcomes
-- Specialized training
-- Years of experience
+    - Your expertise and credentials
+    - Patient outcomes you deliver
+    - Specialized training you hold
+    - Years of experience
+  </Tab>
+  <Tab value="Market Position">
+    **Market Positioning**
 
-### Market Positioning
+    Consider where you want to position yourself:
 
-Consider where you want to position yourself:
-
-| Position | Characteristics | Price Range |
-|----------|-----------------|-------------|
-| **Premium** | Extensive experience, specialized credentials | €120-200+ |
-| **Mid-Range** | Solid experience, good reviews | €80-120 |
-| **Entry** | Building experience, growing patient base | €50-80 |
+    | Position | Characteristics | Price Range |
+    |----------|-----------------|-------------|
+    | Premium | Extensive experience, specialized credentials | €120-200+ |
+    | Mid-Range | Solid experience, good reviews | €80-120 |
+    | Entry | Building experience, growing patient base | €50-80 |
+  </Tab>
+</Tabs>
 
 ## Factors Affecting Price
 
-### Your Credentials
+<Accordions>
+  <Accordion title="Credentials">
+    Higher credentials justify higher prices:
 
-Higher credentials justify higher prices:
+    - Advanced degrees (PhD, Masters)
+    - Specialized certifications
+    - Published research
+    - Speaking engagements
+  </Accordion>
+  <Accordion title="Experience Level">
+    | Experience | Typical Premium |
+    |------------|-----------------|
+    | 0-2 years | Base rate |
+    | 3-5 years | +10-20% |
+    | 6-10 years | +20-35% |
+    | 10+ years | +35-50%+ |
+  </Accordion>
+  <Accordion title="Specialization">
+    Specialized services often command higher prices:
 
-- Advanced degrees (PhD, Masters)
-- Specialized certifications
-- Published research
-- Speaking engagements
+    - Rare expertise
+    - Complex conditions
+    - Innovative techniques
+    - Exclusive training
+  </Accordion>
+  <Accordion title="Market Demand">
+    Adjust based on:
 
-### Experience Level
-
-| Experience | Typical Premium |
-|------------|-----------------|
-| 0-2 years | Base rate |
-| 3-5 years | +10-20% |
-| 6-10 years | +20-35% |
-| 10+ years | +35-50%+ |
-
-### Specialization
-
-Specialized services often command higher prices:
-
-- Rare expertise
-- Complex conditions
-- Innovative techniques
-- Exclusive training
-
-### Market Demand
-
-Adjust based on:
-
-- Your booking rate
-- Waitlist length
-- Competitor pricing
-- Seasonal patterns
+    - Your booking rate
+    - Waitlist length
+    - Competitor pricing
+    - Seasonal patterns
+  </Accordion>
+</Accordions>
 
 ## Pricing by Service Type
 
-### Initial Consultations
-
-First appointments typically include:
-
-- Comprehensive assessment
-- Treatment planning
-- Extended time
-
-**Typical Range**: €80-150 for 60 minutes
-
-### Follow-Up Sessions
-
-Ongoing appointments:
-
-- Progress review
-- Treatment continuation
-- Shorter duration
-
-**Typical Range**: €60-100 for 45 minutes
-
-### Specialized Services
-
-Targeted consultations:
-
-- Pre-surgical preparation
-- Specific assessments
-- Intensive sessions
-
-**Typical Range**: €100-180 for 60 minutes
+| Service Type | Typical Range |
+|--------------|---------------|
+| Initial Consultation (60 min) | €80 - €150 |
+| Follow-Up Session (45 min) | €60 - €100 |
+| Specialized Service (60 min) | €100 - €180 |
+| Quick Check-In (30 min) | €40 - €70 |
 
 ## Pricing Strategies
 
-### Tiered Pricing
+<Tabs items={['Tiered', 'Packages', 'Introductory']}>
+  <Tab value="Tiered">
+    **Tiered Pricing**
 
-Offer different price points:
+    Offer different price points for different needs:
 
-```
-Initial Consultation (60 min): €120
-Follow-Up Standard (45 min): €80
-Follow-Up Brief (30 min): €50
-Extended Session (90 min): €160
-```
+    | Service | Duration | Price |
+    |---------|----------|-------|
+    | Initial Consultation | 60 min | €120 |
+    | Follow-Up Standard | 45 min | €80 |
+    | Follow-Up Brief | 30 min | €50 |
+    | Extended Session | 90 min | €160 |
+  </Tab>
+  <Tab value="Packages">
+    **Package Discounts** (Coming Soon)
 
-### Package Discounts
+    Encourage commitment with packages:
 
-Encourage commitment with packages (coming soon):
+    | Package | Discount |
+    |---------|----------|
+    | 3 sessions | 10% off |
+    | 5 sessions | 15% off |
+    | 10 sessions | 20% off |
+  </Tab>
+  <Tab value="Introductory">
+    **Introductory Pricing**
 
-- 3 sessions: 10% off
-- 5 sessions: 15% off
-- 10 sessions: 20% off
+    Attract new patients:
 
-### Introductory Pricing
+    - Limited-time lower rates
+    - First consultation discount
+    - Special promotional offers
+  </Tab>
+</Tabs>
 
-Attract new patients:
-
-- Limited-time lower rates
-- First consultation discount
-- Special offers
-
-<Callout type="tip">
+<Callout type="info">
   Consider offering a slightly lower rate for your first few appointments to build reviews. Increase prices once you have a solid review base.
 </Callout>
 
 ## Calculating Your Rate
 
-### Step 1: Determine Target Income
+<Steps>
+  <Step>
+    ### Determine Target Income
 
-Consider:
+    Consider your desired monthly/annual income, hours you want to work, business expenses, and taxes.
+  </Step>
+  <Step>
+    ### Factor in Platform Fees
 
-- Desired monthly/annual income
-- Number of hours you want to work
-- Business expenses
-- Taxes
+    | Your Price | Commission (12%) | You Receive |
+    |------------|------------------|-------------|
+    | €80 | €9.60 | €70.40 |
+    | €100 | €12.00 | €88.00 |
+    | €120 | €14.40 | €105.60 |
+  </Step>
+  <Step>
+    ### Calculate Hourly Equivalent
 
-### Step 2: Factor in Platform Fees
+    Include time for the consultation itself, preparation, notes and documentation, and admin tasks.
 
-Remember to account for Eleva Care fees:
+    **Example**: 60-min consultation + 30 min prep/notes = 90 min total work time
 
-| Your Price | Commission (12%) | You Receive |
-|------------|------------------|-------------|
-| €80 | €9.60 | €70.40 |
-| €100 | €12.00 | €88.00 |
-| €120 | €14.40 | €105.60 |
-
-### Step 3: Calculate Hourly Equivalent
-
-Include time for:
-
-- The consultation itself
-- Preparation
-- Notes and documentation
-- Admin tasks
-
-**Example**: 60-min consultation + 30 min prep/notes = 90 min total work time
-
-If you charge €120 and work 90 minutes, your effective rate is €80/hour (minus fees).
+    If you charge €120 and work 90 minutes, your effective rate is €80/hour (minus fees).
+  </Step>
+</Steps>
 
 ## Adjusting Your Prices
 
-### When to Raise Prices
+<Tabs items={['When to Raise', 'When to Lower']}>
+  <Tab value="When to Raise">
+    **Raise Prices When:**
 
-- Consistently booked out
-- Long waitlist
-- Gained new credentials
-- Positive review growth
-- After 6-12 months of experience
+    - Consistently booked out
+    - Long waitlist
+    - Gained new credentials
+    - Positive review growth
+    - After 6-12 months of experience
 
-### How to Raise Prices
+    **How to Raise:**
+    1. Give advance notice to existing patients
+    2. Update service prices
+    3. Consider grandfathering existing patients briefly
+    4. Communicate value, not just price
+  </Tab>
+  <Tab value="When to Lower">
+    **Lower Prices When:**
 
-1. Give advance notice to existing patients
-2. Update service prices
-3. Consider grandfathering existing patients briefly
-4. Communicate value, not just price
-
-### When to Lower Prices
-
-- Low booking rate
-- New to the platform
-- Entering a competitive niche
-- Building your patient base
+    - Low booking rate
+    - New to the platform
+    - Entering a competitive niche
+    - Building your patient base
+  </Tab>
+</Tabs>
 
 ## Competitor Research
 
@@ -208,55 +195,42 @@ If you charge €120 and work 90 minutes, your effective rate is €80/hour (min
 | Similar credentials | Medium |
 
 <Callout type="info">
-  Don't just compete on price. Focus on your unique value proposition - expertise, approach, personality.
+  Don't just compete on price. Focus on your unique value proposition — expertise, approach, personality.
 </Callout>
 
 ## Common Mistakes
 
-### Pricing Too Low
+<Accordions>
+  <Accordion title="Pricing Too Low">
+    - Undervalues your expertise
+    - Attracts price-sensitive patients
+    - Hard to raise later
+    - Lower perceived quality
+  </Accordion>
+  <Accordion title="Pricing Too High Initially">
+    - Few bookings to build reviews
+    - Harder to establish presence
+    - May need to lower (looks bad)
+  </Accordion>
+  <Accordion title="Ignoring Fees">
+    - Price €100, think you'll earn €100
+    - Forget to factor in 8-20% fees
+    - End up with lower effective rate
+  </Accordion>
+  <Accordion title="One-Size-Fits-All">
+    - Same price for all services
+    - Missing opportunity for premium offerings
+    - Not serving different needs
+  </Accordion>
+</Accordions>
 
-- Undervalues your expertise
-- Attracts price-sensitive patients
-- Hard to raise later
-- Lower perceived quality
+---
 
-### Pricing Too High Initially
-
-- Few bookings to build reviews
-- Harder to establish presence
-- May need to lower (looks bad)
-
-### Ignoring Fees
-
-- Price €100, think you'll earn €100
-- Forget to factor in 8-20% fees
-- End up with lower effective rate
-
-### One-Size-Fits-All
-
-- Same price for all services
-- Missing opportunity for premium offerings
-- Not serving different needs
-
-## Testing Your Pricing
-
-### A/B Testing (When Possible)
-
-- Try different prices for similar services
-- Track booking rates
-- Analyze patient feedback
-
-### Seasonal Adjustments
-
-- Higher demand periods
-- Holiday schedules
-- Back-to-school season
-
-## Need Help?
-
-For pricing strategy support:
-
-- **Email**: expert-support@eleva.care
-- **Resources**: Check our Expert Community forums
-
-
+<Cards>
+  <Card title="Payouts & Earnings" href="/docs/expert/earnings/payouts">
+    Understanding payment processing
+  </Card>
+  <Card title="Top Expert Benefits" href="/docs/expert/top-expert/benefits">
+    Lower fees with Top Expert status
+  </Card>
+</Cards>
