--- a/src/content/docs/expert/en/getting-started/availability.mdx
+++ b/src/content/docs/expert/en/getting-started/availability.mdx
@@ -7,40 +7,46 @@ description: Configure your working hours, calendar sync, and appointment settin
 
 Your availability determines when patients can book appointments. Set up your schedule to balance patient access with your work-life needs.
 
-## Availability Settings
-
-### Weekly Schedule
+## Weekly Schedule
 
 Define your recurring weekly availability:
 
-1. Go to **Expert Dashboard** > **Availability**
-2. Click on each day to add time slots
-3. Set start and end times
-4. Save your schedule
+<Steps>
+  <Step>
+    ### Access Availability Settings
+
+    Go to **Expert Dashboard** → **Availability**.
+
+  </Step>
+  <Step>
+    ### Set Time Slots
+
+    Click on each day to add available time slots with start and end times.
+
+  </Step>
+  <Step>
+    ### Save Schedule
+
+    Save your schedule to make it active.
+
+  </Step>
+</Steps>
 
 **Example Schedule:**
 
-| Day | Availability |
-|-----|--------------|
-| Monday | 9:00 - 13:00, 14:00 - 18:00 |
-| Tuesday | 9:00 - 13:00 |
-| Wednesday | 14:00 - 20:00 |
-| Thursday | 9:00 - 13:00, 14:00 - 18:00 |
-| Friday | 9:00 - 12:00 |
-| Saturday | Unavailable |
-| Sunday | Unavailable |
-
-### Time Zone
-
-Your timezone is crucial for international patients:
-
-1. Go to **Settings** > **Time Zone**
-2. Select your timezone
-3. All availability displays in this timezone
-4. Patients see times in their local timezone
+| Day       | Availability                |
+| --------- | --------------------------- |
+| Monday    | 9:00 - 13:00, 14:00 - 18:00 |
+| Tuesday   | 9:00 - 13:00                |
+| Wednesday | 14:00 - 20:00               |
+| Thursday  | 9:00 - 13:00, 14:00 - 18:00 |
+| Friday    | 9:00 - 12:00                |
+| Saturday  | Unavailable                 |
+| Sunday    | Unavailable                 |
 
 <Callout type="info">
-  Patients always see appointment times in their local timezone, but your dashboard shows your timezone.
+  Patients always see appointment times in their local timezone, but your dashboard shows your
+  timezone.
 </Callout>
 
 ## Calendar Integration
@@ -49,146 +55,161 @@ Your timezone is crucial for international patients:
 
 Connect your Google Calendar for two-way sync:
 
-1. Go to **Integrations** > **Google Calendar**
-2. Click **Connect**
-3. Authorize Eleva Care access
-4. Select calendars to sync
+<Steps>
+  <Step>
+    ### Connect
 
-**Benefits:**
-- Automatic blocking of existing events
-- Appointments appear in your Google Calendar
-- Prevents double-booking
-- Real-time updates
+    Go to **Integrations** → **Google Calendar** and click **Connect**.
+
+  </Step>
+  <Step>
+    ### Authorize
+
+    Grant Eleva Care access to read your calendar.
+
+  </Step>
+  <Step>
+    ### Select Calendars
+
+    Choose which calendars to sync for availability blocking.
+
+  </Step>
+</Steps>
 
 ### How Sync Works
 
-| Direction | What Syncs |
-|-----------|------------|
-| Google → Eleva | Events block your availability |
-| Eleva → Google | New bookings appear in your calendar |
+| Direction      | What Syncs                                   |
+| -------------- | -------------------------------------------- |
+| Google → Eleva | Events block your availability automatically |
+| Eleva → Google | New bookings appear in your calendar         |
 
-<Callout type="warning">
-  **Privacy Note**: We only read event times and free/busy status. We don't access event details or attendees from your personal calendar.
+<Callout type="info">
+  **Privacy Note**: We only read event times and free/busy status. We don't access event details or
+  attendees from your personal calendar.
 </Callout>
 
 ## Appointment Settings
 
-### Minimum Notice
+<Tabs items={['Minimum Notice', 'Buffer Time', 'Advance Booking']}>
+  <Tab value="Minimum Notice">
+    **How far in advance must patients book?**
 
-Set how far in advance patients must book:
+    | Setting | Use Case |
+    |---------|----------|
+    | 1 hour | Maximum flexibility, last-minute bookings |
+    | 24 hours | Standard — time to prepare |
+    | 48 hours | More preparation time |
+    | 1 week | Complex consultations |
 
-| Setting | Use Case |
-|---------|----------|
-| 1 hour | Maximum flexibility, last-minute bookings |
-| 24 hours | Standard - time to prepare |
-| 48 hours | More preparation time |
-| 1 week | Complex consultations |
+  </Tab>
+  <Tab value="Buffer Time">
+    **Add time between appointments:**
 
-### Buffer Time
+    - **Before**: Time to prepare for the next patient
+    - **After**: Time for notes and breaks
 
-Add buffer time between appointments:
+    **Recommendation**: 15-minute buffer before and after ensures you're never rushed.
 
-- **Before**: Time to prepare
-- **After**: Time for notes and breaks
+  </Tab>
+  <Tab value="Advance Booking">
+    **How far ahead can patients book?**
 
-**Example**: 15-minute buffer before and after ensures you're never rushed.
+    | Setting | Best For |
+    |---------|----------|
+    | 1 week | Limited availability |
+    | 2 weeks | Standard setting |
+    | 1 month | Extended availability |
+    | 3 months | Maximum flexibility |
 
-### Maximum Advance Booking
-
-How far ahead can patients book?
-
-- 1 week: Limited availability
-- 2 weeks: Standard
-- 1 month: Extended availability
-- 3 months: Maximum flexibility
+  </Tab>
+</Tabs>
 
 ## Date Overrides
 
-### Blocking Specific Dates
+<Accordions>
+  <Accordion title="Blocking Specific Dates">
+    For vacations or days off:
 
-For vacations or days off:
+    1. Go to **Availability** → **Date Overrides**
+    2. Click **Add Override**
+    3. Select the date(s)
+    4. Mark as **Unavailable**
+    5. Save
 
-1. Go to **Availability** > **Date Overrides**
-2. Click **Add Override**
-3. Select the date(s)
-4. Mark as **Unavailable**
-5. Save
+  </Accordion>
+  <Accordion title="Adding Extra Availability">
+    For special occasions:
 
-### Adding Extra Availability
+    1. Add a date override
+    2. Set custom hours for that day
+    3. This overrides your weekly schedule for that specific date
 
-For special occasions:
-
-1. Add a date override
-2. Set custom hours for that day
-3. Overrides your weekly schedule
+  </Accordion>
+</Accordions>
 
 ## Managing Existing Bookings
 
-### When You Need to Cancel
+<Tabs items={['Canceling', 'Rescheduling']}>
+  <Tab value="Canceling">
+    **When You Need to Cancel**
 
-If you must cancel an existing appointment:
+    1. Go to **Appointments**
+    2. Select the appointment
+    3. Click **Cancel**
+    4. Provide a reason
+    5. Patient is automatically refunded
 
-1. Go to **Appointments**
-2. Select the appointment
-3. Click **Cancel**
-4. Provide a reason
-5. Patient is automatically refunded
+    <Callout type="warning">
+      Canceling appointments affects your reliability score and may impact Top Expert eligibility.
+    </Callout>
 
-<Callout type="warning">
-  Canceling appointments affects your reliability score and may impact Top Expert eligibility.
-</Callout>
+  </Tab>
+  <Tab value="Rescheduling">
+    **To Reschedule**
 
-### Rescheduling
+    1. Contact the patient through the platform
+    2. Agree on a new time
+    3. Cancel the original appointment
+    4. Patient books the new time slot
 
-To reschedule an appointment:
-
-1. Contact the patient through the platform
-2. Agree on a new time
-3. Cancel the original appointment
-4. Patient books the new time
+  </Tab>
+</Tabs>
 
 ## Best Practices
 
-### Consistency
-
-- Set regular hours patients can rely on
-- Update availability at least 2 weeks in advance
-- Communicate changes promptly
-
-### Realistic Scheduling
-
-- Don't overbook yourself
-- Include time for breaks and notes
-- Account for different consultation types
-
-### Time Zone Awareness
-
-- Consider your target patient base
-- Offer evening slots for working patients
-- Remember time differences for international patients
+<Accordions>
+  <Accordion title="Consistency">
+    - Set regular hours patients can rely on - Update availability at least 2 weeks in advance -
+    Communicate changes promptly
+  </Accordion>
+  <Accordion title="Realistic Scheduling">
+    - Don't overbook yourself - Include time for breaks and notes - Account for different
+    consultation types
+  </Accordion>
+  <Accordion title="Time Zone Awareness">
+    - Consider your target patient base - Offer evening slots for working patients - Remember time
+    differences for international patients
+  </Accordion>
+</Accordions>
 
 ## Troubleshooting
 
-### Appointments Not Showing
+<Accordions>
+  <Accordion title="Appointments Not Showing">
+    - Check calendar sync status - Verify timezone settings - Ensure service is active - Check
+    minimum notice requirements
+  </Accordion>
+  <Accordion title="Double Bookings">
+    - Enable Google Calendar sync - Add buffer time between appointments - Review availability
+    settings
+  </Accordion>
+  <Accordion title="Sync Issues">
+    1. Disconnect Google Calendar 2. Reconnect with fresh authorization 3. Check sync interval
+    settings
+  </Accordion>
+</Accordions>
 
-- Check calendar sync status
-- Verify timezone settings
-- Ensure service is active
-- Check minimum notice requirements
-
-### Double Bookings
-
-- Enable Google Calendar sync
-- Add buffer time between appointments
-- Review availability settings
-
-### Sync Issues
-
-1. Disconnect Google Calendar
-2. Reconnect with fresh authorization
-3. Check sync interval settings
-
-## Next Steps
+---
 
 <Cards>
   <Card title="Understand Earnings" href="/docs/expert/earnings/payouts">
@@ -198,5 +219,3 @@ To reschedule an appointment:
     See what it takes to earn Top Expert status
   </Card>
 </Cards>
-
-
