--- a/src/content/docs/expert/en/top-expert/requirements.mdx
+++ b/src/content/docs/expert/en/top-expert/requirements.mdx
@@ -9,7 +9,7 @@ Top Expert status is earned through consistent excellence. Like Airbnb's Superho
 
 ## Overview
 
-Top Expert is not purchased—it's earned through:
+Top Expert is **earned, not purchased**. Qualification is based on:
 
 - High patient satisfaction
 - Consistent availability
@@ -20,220 +20,211 @@ Top Expert is not purchased—it's earned through:
 
 You must meet **all** of the following criteria:
 
-### 1. Rating Requirement
+<Accordions>
+  <Accordion title="Rating Requirement">
+    **Minimum 4.8 out of 5.0 stars average rating**
 
-**Minimum 4.8 out of 5.0 stars average rating**
+    - Calculated from all reviews in evaluation period
+    - Responses to reviews don't affect rating
+    - All reviews are weighted equally
+  </Accordion>
+  <Accordion title="Appointment Volume">
+    **Minimum 25 completed appointments** in the past 90 days
 
-- Calculated from all reviews in evaluation period
-- Responses to reviews don't affect rating
-- All reviews are weighted equally
+    - Cancelled appointments don't count
+    - Patient no-shows count as completed
+    - Both new and follow-up appointments count
+  </Accordion>
+  <Accordion title="Cancellation Rate">
+    **Less than 5% cancellation rate**
 
-### 2. Appointment Volume
+    - Measured over past 90 days
+    - Only expert-initiated cancellations count
+    - Patient cancellations don't affect your rate
+  </Accordion>
+  <Accordion title="Response Rate">
+    **90% or higher response rate** within 24 hours
 
-**Minimum 25 completed appointments** in the past 90 days
+    - Respond to booking inquiries
+    - Answer patient messages
+    - Acknowledge appointment confirmations
+  </Accordion>
+  <Accordion title="Experience Requirement">
+    **Minimum 3 months** as an active Community Expert
 
-- Cancelled appointments don't count
-- Patient no-shows count as completed
-- Both new and follow-up appointments count
+    - Profile must be published
+    - Active means accepting bookings
+    - Breaks don't reset the clock
+  </Accordion>
+  <Accordion title="Availability Consistency">
+    **Active 80% or more** of days in evaluation period
 
-### 3. Cancellation Rate
+    - Days with available time slots count
+    - Doesn't require bookings each day
+    - Pre-marked vacation blocks don't penalize you
+  </Accordion>
+</Accordions>
 
-**Less than 5% cancellation rate**
+## At a Glance
 
-- Measured over past 90 days
-- Only expert-initiated cancellations count
-- Patient cancellations don't affect your rate
-
-Calculation:
-```
-Cancellation Rate = Expert Cancellations / Total Bookings × 100
-```
-
-### 4. Response Rate
-
-**90% or higher response rate** within 24 hours
-
-- Respond to booking inquiries
-- Answer patient messages
-- Acknowledge appointment confirmations
-
-### 5. Experience Requirement
-
-**Minimum 3 months** as an active Community Expert
-
-- Profile must be published
-- Active means accepting bookings
-- Breaks don't reset the clock
-
-### 6. Availability Consistency
-
-**Active 80% or more** of days in evaluation period
-
-- Days with available time slots
-- Doesn't require bookings each day
-- Vacation blocks don't penalize you (if marked in advance)
+| Metric | Requirement |
+|--------|-------------|
+| Average Rating | 4.8+ stars |
+| Appointments (90 days) | 25+ completed |
+| Cancellation Rate | Under 5% |
+| Response Rate | 90%+ within 24hr |
+| Experience | 3+ months active |
+| Availability | 80%+ days active |
 
 ## Evaluation Process
 
-### When Are You Evaluated?
+<Steps>
+  <Step>
+    ### Quarterly Evaluation
 
-Evaluations occur **quarterly**:
+    Evaluations occur on January 1, April 1, July 1, and October 1.
+  </Step>
+  <Step>
+    ### 90-Day Window
 
-- January 1st
-- April 1st
-- July 1st
-- October 1st
+    Each evaluation looks at the previous 90 days of activity.
+  </Step>
+  <Step>
+    ### Automatic Review
 
-### Evaluation Window
+    The system automatically evaluates all eligible experts. No application needed.
+  </Step>
+  <Step>
+    ### Results Notification
 
-Each evaluation looks at the **previous 90 days**:
+    Within 48 hours: email notification, dashboard update, and badge appears (if qualified).
+  </Step>
+</Steps>
 
-- October evaluation looks at July-September
-- January evaluation looks at October-December
-- And so on...
+## Maintaining Status
 
-### Automatic Evaluation
+<Tabs items={['Ongoing', 'Grace Period', 'Breaks']}>
+  <Tab value="Ongoing">
+    **Ongoing Requirements**
 
-The system automatically evaluates all eligible experts. No application needed—just meet the criteria.
+    Once you qualify, you must continue meeting criteria:
 
-### Results Notification
+    - Quarterly re-evaluation
+    - Same requirements each quarter
+    - One "grace" quarter if you slip slightly
+  </Tab>
+  <Tab value="Grace Period">
+    **Grace Period**
 
-Within 48 hours of evaluation:
+    If you narrowly miss criteria:
 
-- Email notification of results
-- Dashboard update
-- Badge appears on profile (if qualified)
+    - One-month warning period
+    - Opportunity to improve metrics
+    - Full demotion if not improved
 
-## Maintaining Top Expert Status
+    <Callout type="warning">
+      Significant violations (e.g., 15% cancellation rate, 3.5 star rating) result in immediate status loss without grace period.
+    </Callout>
+  </Tab>
+  <Tab value="Breaks">
+    **Voluntary Breaks**
 
-### Ongoing Requirements
+    Taking time off?
 
-Once you qualify, you must continue meeting criteria:
-
-- Quarterly re-evaluation
-- Same requirements each quarter
-- One "grace" quarter if you slip slightly
-
-### Grace Period
-
-If you narrowly miss criteria:
-
-- One-month warning period
-- Opportunity to improve metrics
-- Full demotion if not improved
-
-<Callout type="warning">
-  Significant violations (e.g., 15% cancellation rate, 3.5 star rating) result in immediate status loss without grace period.
-</Callout>
-
-### Voluntary Breaks
-
-Taking time off?
-
-1. Mark vacation in advance
-2. Notify support if extended break
-3. Status preserved for up to 30 days
-4. Longer breaks require re-qualification
+    1. Mark vacation in advance
+    2. Notify support if extended break
+    3. Status preserved for up to 30 days
+    4. Longer breaks require re-qualification
+  </Tab>
+</Tabs>
 
 ## Tracking Your Progress
 
 ### Metrics Dashboard
 
-Monitor your progress:
-
-1. Go to **Expert Dashboard** > **Performance**
-2. View current metrics
-3. See trends over time
-4. Identify areas for improvement
-
-### Key Metrics Display
+Monitor your progress at **Expert Dashboard** → **Performance**:
 
 | Metric | Your Score | Target |
 |--------|------------|--------|
-| Average Rating | 4.7 ⭐ | 4.8+ |
-| Appointments (90 days) | 22 | 25+ |
-| Cancellation Rate | 3% | Under 5% |
-| Response Rate | 95% | 90%+ |
+| Average Rating | — | 4.8+ |
+| Appointments (90 days) | — | 25+ |
+| Cancellation Rate | — | Under 5% |
+| Response Rate | — | 90%+ |
 
-### Improvement Suggestions
-
-The dashboard provides personalized tips:
-
-- "3 more appointments needed this quarter"
-- "Response rate improved! Keep it up"
-- "Consider adding more availability on weekends"
+The dashboard provides personalized improvement suggestions based on your current metrics.
 
 ## Disqualification
 
-### Automatic Disqualification
+<Tabs items={['Automatic', 'Appeals']}>
+  <Tab value="Automatic">
+    **Automatic Disqualification**
 
-Immediate status loss for:
+    Immediate status loss for:
 
-- Patient safety violations
-- Policy violations
-- Verified complaints
-- Fraudulent activity
+    - Patient safety violations
+    - Policy violations
+    - Verified complaints
+    - Fraudulent activity
+  </Tab>
+  <Tab value="Appeals">
+    **Appeals Process**
 
-### Appeals Process
+    If you believe an evaluation was incorrect:
 
-If you believe an evaluation was incorrect:
-
-1. Contact expert-support@eleva.care
-2. Provide documentation
-3. Review completed within 5 business days
-4. Decision is final
+    1. Contact expert-support@eleva.care
+    2. Provide documentation
+    3. Review completed within 5 business days
+    4. Decision is final
+  </Tab>
+</Tabs>
 
 ## Tips for Success
 
-### Maximize Your Rating
+<Accordions>
+  <Accordion title="Maximize Your Rating">
+    - Provide exceptional care
+    - Communicate clearly
+    - Follow up after appointments
+    - Ask satisfied patients to leave reviews
+  </Accordion>
+  <Accordion title="Maintain Consistency">
+    - Set realistic availability
+    - Honor all appointments
+    - Respond promptly to messages
+    - Update calendar regularly
+  </Accordion>
+  <Accordion title="Avoid Cancellations">
+    - Only accept appointments you can keep
+    - Build buffer time
+    - Plan vacations in advance
+    - Have contingency plans
+  </Accordion>
+</Accordions>
 
-- Provide exceptional care
-- Communicate clearly
-- Follow up after appointments
-- Ask satisfied patients to leave reviews
+## Frequently Asked Questions
 
-### Maintain Consistency
+<Accordions>
+  <Accordion title="Can I buy Top Expert status?">
+    No. Top Expert status is earned exclusively through meeting performance criteria.
+  </Accordion>
+  <Accordion title="What if I'm close but don't qualify?">
+    Keep working on your metrics. You'll be evaluated again next quarter.
+  </Accordion>
+  <Accordion title="Does my subscription plan affect eligibility?">
+    No. Both commission-only and subscription experts are evaluated equally.
+  </Accordion>
+  <Accordion title="Can I lose status mid-quarter?">
+    Only for serious violations. Regular metrics are evaluated quarterly.
+  </Accordion>
+</Accordions>
 
-- Set realistic availability
-- Honor all appointments
-- Respond promptly to messages
-- Update calendar regularly
-
-### Avoid Cancellations
-
-- Only accept appointments you can keep
-- Build buffer time
-- Plan vacations in advance
-- Have contingency plans
-
-## FAQ
-
-### Can I buy Top Expert status?
-
-No. Top Expert status is earned exclusively through meeting performance criteria.
-
-### What if I'm close but don't qualify?
-
-Keep working on your metrics. You'll be evaluated again next quarter.
-
-### Does my subscription plan affect eligibility?
-
-No. Both commission-only and subscription experts are evaluated equally.
-
-### Can I lose status mid-quarter?
-
-Only for serious violations. Regular metrics are evaluated quarterly.
-
-## Ready to Qualify?
-
-Start focusing on these metrics today:
+---
 
 <Cards>
-  <Card title="Build Your Practice" href="/docs/expert/getting-started/services">
-    Create services that attract patients
-  </Card>
   <Card title="Top Expert Benefits" href="/docs/expert/top-expert/benefits">
     See what you'll unlock
   </Card>
+  <Card title="Build Your Practice" href="/docs/expert/getting-started/services">
+    Create services that attract patients
+  </Card>
 </Cards>
-
