--- a/src/content/docs/expert/pt/getting-started/availability.mdx
+++ b/src/content/docs/expert/pt/getting-started/availability.mdx
@@ -1,24 +1,35 @@
 ---
 title: Gerir Disponibilidade
-description: Configure as suas horas de trabalho, sincronização de calendário e definições de consultas.
+description: Configure os seus horários de trabalho, sincronização de calendário e definições de marcação.
 ---
 
 # Gerir Disponibilidade
 
-A sua disponibilidade determina quando os pacientes podem marcar consultas. Configure o seu horário para equilibrar o acesso dos pacientes com as suas necessidades de vida-trabalho.
+A sua disponibilidade determina quando os pacientes podem marcar consultas. Configure a sua agenda para equilibrar o acesso dos pacientes com as suas necessidades de vida pessoal.
 
-## Definições de Disponibilidade
-
-### Horário Semanal
+## Agenda Semanal
 
 Defina a sua disponibilidade semanal recorrente:
 
-1. Vá a **Painel do Especialista** > **Disponibilidade**
-2. Clique em cada dia para adicionar intervalos de tempo
-3. Defina horas de início e fim
-4. Guarde o seu horário
+<Steps>
+  <Step>
+    ### Aceder a Definições de Disponibilidade
 
-**Exemplo de Horário:**
+    Vá a **Dashboard de Especialista** → **Disponibilidade**.
+  </Step>
+  <Step>
+    ### Definir Horários
+
+    Clique em cada dia para adicionar horários disponíveis com horas de início e fim.
+  </Step>
+  <Step>
+    ### Guardar Agenda
+
+    Guarde a sua agenda para a ativar.
+  </Step>
+</Steps>
+
+**Exemplo de Agenda:**
 
 | Dia | Disponibilidade |
 |-----|-----------------|
@@ -30,172 +41,173 @@ Defina a sua disponibilidade semanal recorrente:
 | Sábado | Indisponível |
 | Domingo | Indisponível |
 
-### Fuso Horário
-
-O seu fuso horário é crucial para pacientes internacionais:
-
-1. Vá a **Definições** > **Fuso Horário**
-2. Selecione o seu fuso horário
-3. Toda a disponibilidade é exibida neste fuso horário
-4. Os pacientes veem os horários no seu fuso horário local
-
 <Callout type="info">
-  Os pacientes veem sempre os horários das consultas no seu fuso horário local, mas o seu painel mostra o seu fuso horário.
+  Os pacientes veem sempre os horários das consultas no seu fuso horário local, mas o seu dashboard mostra o seu fuso horário.
 </Callout>
 
 ## Integração de Calendário
 
-### Sincronização com Google Calendar
+### Sincronização Google Calendar
 
 Conecte o seu Google Calendar para sincronização bidirecional:
 
-1. Vá a **Integrações** > **Google Calendar**
-2. Clique em **Conectar**
-3. Autorize o acesso da Eleva Care
-4. Selecione calendários para sincronizar
+<Steps>
+  <Step>
+    ### Conectar
 
-**Benefícios:**
-- Bloqueio automático de eventos existentes
-- Consultas aparecem no seu Google Calendar
-- Previne marcações duplas
-- Atualizações em tempo real
+    Vá a **Integrações** → **Google Calendar** e clique em **Conectar**.
+  </Step>
+  <Step>
+    ### Autorizar
+
+    Conceda acesso à Eleva Care para ler o seu calendário.
+  </Step>
+  <Step>
+    ### Selecionar Calendários
+
+    Escolha quais calendários sincronizar para bloqueio de disponibilidade.
+  </Step>
+</Steps>
 
 ### Como Funciona a Sincronização
 
 | Direção | O Que Sincroniza |
 |---------|------------------|
-| Google → Eleva | Eventos bloqueiam a sua disponibilidade |
+| Google → Eleva | Eventos bloqueiam automaticamente a sua disponibilidade |
 | Eleva → Google | Novas marcações aparecem no seu calendário |
 
-<Callout type="warning">
+<Callout type="info">
   **Nota de Privacidade**: Apenas lemos horários de eventos e estado livre/ocupado. Não acedemos a detalhes de eventos ou participantes do seu calendário pessoal.
 </Callout>
 
-## Definições de Consultas
+## Definições de Marcação
 
-### Aviso Mínimo
+<Tabs items={['Aviso Mínimo', 'Tempo de Buffer', 'Marcação Antecipada']}>
+  <Tab value="Aviso Mínimo">
+    **Com quanta antecedência devem os pacientes marcar?**
 
-Defina com quanta antecedência os pacientes devem marcar:
+    | Definição | Caso de Uso |
+    |-----------|-------------|
+    | 1 hora | Flexibilidade máxima, marcações de última hora |
+    | 24 horas | Standard — tempo para preparar |
+    | 48 horas | Mais tempo de preparação |
+    | 1 semana | Consultas complexas |
+  </Tab>
+  <Tab value="Tempo de Buffer">
+    **Adicione tempo entre consultas:**
 
-| Definição | Caso de Uso |
-|-----------|-------------|
-| 1 hora | Máxima flexibilidade, marcações de última hora |
-| 24 horas | Standard - tempo para preparar |
-| 48 horas | Mais tempo de preparação |
-| 1 semana | Consultas complexas |
+    - **Antes**: Tempo para preparar para o próximo paciente
+    - **Depois**: Tempo para notas e pausas
 
-### Tempo de Buffer
+    **Recomendação**: 15 minutos de buffer antes e depois garante que nunca está apressado.
+  </Tab>
+  <Tab value="Marcação Antecipada">
+    **Com quanta antecedência podem os pacientes marcar?**
 
-Adicione tempo de buffer entre consultas:
-
-- **Antes**: Tempo para preparar
-- **Depois**: Tempo para notas e pausas
-
-**Exemplo**: 15 minutos de buffer antes e depois garante que nunca está apressado.
-
-### Marcação com Antecedência Máxima
-
-Com que antecedência podem os pacientes marcar?
-
-- 1 semana: Disponibilidade limitada
-- 2 semanas: Standard
-- 1 mês: Disponibilidade alargada
-- 3 meses: Máxima flexibilidade
+    | Definição | Melhor Para |
+    |-----------|-------------|
+    | 1 semana | Disponibilidade limitada |
+    | 2 semanas | Definição standard |
+    | 1 mês | Disponibilidade estendida |
+    | 3 meses | Flexibilidade máxima |
+  </Tab>
+</Tabs>
 
 ## Exceções de Data
 
-### Bloquear Datas Específicas
+<Accordions>
+  <Accordion title="Bloquear Datas Específicas">
+    Para férias ou dias de folga:
 
-Para férias ou dias de folga:
+    1. Vá a **Disponibilidade** → **Exceções de Data**
+    2. Clique em **Adicionar Exceção**
+    3. Selecione a(s) data(s)
+    4. Marque como **Indisponível**
+    5. Guarde
+  </Accordion>
+  <Accordion title="Adicionar Disponibilidade Extra">
+    Para ocasiões especiais:
 
-1. Vá a **Disponibilidade** > **Exceções de Data**
-2. Clique em **Adicionar Exceção**
-3. Selecione a(s) data(s)
-4. Marque como **Indisponível**
-5. Guarde
-
-### Adicionar Disponibilidade Extra
-
-Para ocasiões especiais:
-
-1. Adicione uma exceção de data
-2. Defina horários personalizados para esse dia
-3. Substitui o seu horário semanal
+    1. Adicione uma exceção de data
+    2. Defina horários personalizados para esse dia
+    3. Isto substitui a sua agenda semanal para essa data específica
+  </Accordion>
+</Accordions>
 
 ## Gerir Marcações Existentes
 
-### Quando Precisa de Cancelar
+<Tabs items={['Cancelar', 'Reagendar']}>
+  <Tab value="Cancelar">
+    **Quando Precisa de Cancelar**
 
-Se precisar de cancelar uma consulta existente:
+    1. Vá a **Marcações**
+    2. Selecione a marcação
+    3. Clique em **Cancelar**
+    4. Forneça um motivo
+    5. O paciente é automaticamente reembolsado
 
-1. Vá a **Consultas**
-2. Selecione a consulta
-3. Clique em **Cancelar**
-4. Forneça um motivo
-5. O paciente é automaticamente reembolsado
+    <Callout type="warning">
+      Cancelar consultas afeta a sua pontuação de fiabilidade e pode impactar a elegibilidade para Top Expert.
+    </Callout>
+  </Tab>
+  <Tab value="Reagendar">
+    **Para Reagendar**
 
-<Callout type="warning">
-  Cancelar consultas afeta a sua pontuação de fiabilidade e pode impactar a elegibilidade para Top Expert.
-</Callout>
+    1. Contacte o paciente através da plataforma
+    2. Acordem um novo horário
+    3. Cancele a marcação original
+    4. O paciente marca o novo horário
+  </Tab>
+</Tabs>
 
-### Reagendar
+## Boas Práticas
 
-Para reagendar uma consulta:
-
-1. Contacte o paciente através da plataforma
-2. Acordem um novo horário
-3. Cancele a consulta original
-4. O paciente marca o novo horário
-
-## Melhores Práticas
-
-### Consistência
-
-- Defina horários regulares em que os pacientes possam confiar
-- Atualize a disponibilidade com pelo menos 2 semanas de antecedência
-- Comunique alterações prontamente
-
-### Agendamento Realista
-
-- Não se sobrecarregue
-- Inclua tempo para pausas e notas
-- Considere diferentes tipos de consultas
-
-### Consciência de Fuso Horário
-
-- Considere a sua base de pacientes-alvo
-- Ofereça horários à noite para pacientes que trabalham
-- Lembre-se das diferenças horárias para pacientes internacionais
+<Accordions>
+  <Accordion title="Consistência">
+    - Defina horários regulares em que os pacientes possam confiar
+    - Atualize a disponibilidade com pelo menos 2 semanas de antecedência
+    - Comunique alterações prontamente
+  </Accordion>
+  <Accordion title="Agendamento Realista">
+    - Não se sobrecarregue
+    - Inclua tempo para pausas e notas
+    - Considere diferentes tipos de consulta
+  </Accordion>
+  <Accordion title="Consciência de Fuso Horário">
+    - Considere a sua base de pacientes alvo
+    - Ofereça horários noturnos para pacientes que trabalham
+    - Lembre-se das diferenças horárias para pacientes internacionais
+  </Accordion>
+</Accordions>
 
 ## Resolução de Problemas
 
-### Consultas Não Aparecem
+<Accordions>
+  <Accordion title="Marcações Não Aparecem">
+    - Verifique o estado da sincronização do calendário
+    - Verifique as definições de fuso horário
+    - Assegure que o serviço está ativo
+    - Verifique os requisitos de aviso mínimo
+  </Accordion>
+  <Accordion title="Marcações Duplas">
+    - Ative a sincronização Google Calendar
+    - Adicione tempo de buffer entre marcações
+    - Reveja as definições de disponibilidade
+  </Accordion>
+  <Accordion title="Problemas de Sincronização">
+    1. Desconecte o Google Calendar
+    2. Reconecte com nova autorização
+    3. Verifique as definições de intervalo de sincronização
+  </Accordion>
+</Accordions>
 
-- Verifique o estado da sincronização do calendário
-- Verifique as definições de fuso horário
-- Garanta que o serviço está ativo
-- Verifique os requisitos de aviso mínimo
-
-### Marcações Duplas
-
-- Ative a sincronização com o Google Calendar
-- Adicione tempo de buffer entre consultas
-- Reveja as definições de disponibilidade
-
-### Problemas de Sincronização
-
-1. Desconecte o Google Calendar
-2. Reconecte com autorização nova
-3. Verifique as definições de intervalo de sincronização
-
-## Próximos Passos
+---
 
 <Cards>
   <Card title="Compreender Ganhos" href="/docs/expert/earnings/payouts">
     Saiba sobre processamento de pagamentos
   </Card>
   <Card title="Tornar-se Top Expert" href="/docs/expert/top-expert/requirements">
-    Veja o que é preciso para ganhar estatuto Top Expert
+    Veja o que é necessário para ganhar o estatuto Top Expert
   </Card>
 </Cards>
-
