--- a/src/content/docs/expert/pt/index.mdx
+++ b/src/content/docs/expert/pt/index.mdx
@@ -1,103 +1,136 @@
 ---
 title: Bem-vindo aos Recursos para Especialistas
-description: Tudo o que precisa de saber sobre prestar serviços e fazer crescer a sua prática na Eleva Care.
+description: Tudo o que precisa saber sobre fornecer serviços e fazer crescer a sua prática na Eleva Care.
 ---
 
 # Bem-vindo aos Recursos para Especialistas
 
-A Eleva Care capacita profissionais de saúde independentes a alcançar pacientes globalmente mantendo total controlo da sua prática. Este centro de recursos irá ajudá-lo a começar e a aproveitar ao máximo a nossa plataforma.
+A Eleva Care capacita profissionais de saúde independentes a alcançar pacientes globalmente, mantendo total controlo da sua prática. Este centro de recursos ajuda-o a começar e a tirar o máximo partido da nossa plataforma.
 
 ## Porquê Juntar-se à Eleva Care?
 
 <Cards>
   <Card title="Prática Independente" href="/docs/expert/getting-started/profile">
-    Trabalhe nos seus termos. Defina o seu próprio horário, taxas e políticas de prática.
+    Trabalhe nos seus termos. Defina a sua própria agenda, tarifas e políticas de prática.
   </Card>
   <Card title="Tecnologia Segura" href="/docs/expert/getting-started/services">
     Tratamos de marcações, pagamentos e videochamadas para que possa focar-se nos cuidados.
   </Card>
   <Card title="Alcance Global" href="/docs/expert/earnings/payouts">
-    Conecte-se com pacientes de todo o mundo através da nossa plataforma multilingue.
+    Conecte-se com pacientes em todo o mundo através da nossa plataforma multilingue.
   </Card>
 </Cards>
 
 ## Como Funciona
 
-### Para Si, o Especialista
+<Tabs items={['O Que Fornecemos', 'O Que Você Fornece']}>
+  <Tab value="O Que Fornecemos">
+    **Serviços da Plataforma**
 
-1. **Candidate-se & Seja Verificado** - Submeta as suas credenciais para revisão
-2. **Configure o Seu Perfil** - Crie o seu perfil profissional
-3. **Configure Serviços** - Defina as suas ofertas de consulta
-4. **Comece a Aceitar Pacientes** - Publique o seu perfil e comece a receber marcações
+    - Sistema de marcação e agendamento
+    - Processamento seguro de pagamentos via Stripe
+    - Videochamadas compatíveis com HIPAA
+    - Ferramentas de gestão de pacientes
+    - Dashboard de ganhos e pagamentos
+  </Tab>
+  <Tab value="O Que Você Fornece">
+    **A Sua Expertise**
 
-### O Que Fornecemos
-
-- ✅ Sistema de marcações e agendamento
-- ✅ Processamento de pagamentos seguro
-- ✅ Videochamadas conformes com HIPAA
-- ✅ Ferramentas de gestão de pacientes
-- ✅ Painel de ganhos e pagamentos
-
-### O Que Fornece
-
-- ✅ A sua expertise profissional
-- ✅ Cuidados diretos ao paciente
-- ✅ Documentação clínica (se aplicável)
-- ✅ O seu julgamento profissional
+    - A sua expertise profissional e credenciais
+    - Cuidados diretos ao paciente
+    - Documentação clínica (se aplicável)
+    - O seu julgamento profissional
+    - Seguro de responsabilidade profissional
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  **Importante**: A Eleva Care fornece a plataforma tecnológica. Você, como profissional independente, fornece os serviços de saúde e mantém o seu próprio seguro de responsabilidade profissional.
+  A Eleva Care fornece a plataforma tecnológica. Você, como profissional independente, fornece os serviços de saúde e mantém o seu próprio seguro de responsabilidade profissional.
 </Callout>
 
-## Checklist para Começar
+## Começar
 
-Antes de poder começar a aceitar pacientes, complete estes passos:
+<Steps>
+  <Step>
+    ### Complete o Seu Perfil
 
-- [ ] **Complete o seu perfil** - Adicione a sua foto, bio e credenciais
-- [ ] **Defina a sua disponibilidade** - Configure as suas horas de trabalho
-- [ ] **Crie pelo menos um serviço** - Defina as suas ofertas de consulta
-- [ ] **Conecte o Stripe** - Configure a sua conta de pagamentos
-- [ ] **Verifique a sua identidade** - Complete a verificação de identidade
-- [ ] **Publique o seu perfil** - Torne o seu perfil visível para pacientes
+    Adicione a sua foto, biografia, credenciais e selecione as suas especializações.
+  </Step>
+  <Step>
+    ### Defina a Sua Disponibilidade
 
-## Níveis de Especialistas
+    Configure os seus horários de trabalho e conecte o seu calendário.
+  </Step>
+  <Step>
+    ### Crie Serviços
 
-### Especialista da Comunidade
+    Defina as suas ofertas de consulta com descrições e preços.
+  </Step>
+  <Step>
+    ### Conecte o Stripe
 
-O nosso nível standard para profissionais verificados:
+    Configure a sua conta de pagamentos para receber ganhos.
+  </Step>
+  <Step>
+    ### Verifique a Sua Identidade
 
-- Liste até 5 serviços
-- Análises básicas
-- Pagamentos semanais
-- Suporte por email
+    Complete a verificação de identidade e credenciais.
+  </Step>
+  <Step>
+    ### Publique o Seu Perfil
 
-### Top Expert
+    Torne o seu perfil visível para pacientes e comece a aceitar marcações.
+  </Step>
+</Steps>
 
-Conquistado através de excelente desempenho:
+## Níveis de Especialista
 
-- Serviços ilimitados
-- Análises avançadas
-- Pagamentos diários
-- Suporte prioritário
-- Posicionamento destacado
-- Taxas de plataforma mais baixas
+<Tabs items={['Community Expert', 'Top Expert']}>
+  <Tab value="Community Expert">
+    **Nível Standard**
 
-[Saiba sobre os requisitos Top Expert →](/docs/expert/top-expert/requirements)
+    O nosso nível de entrada para profissionais verificados:
+
+    | Característica | Detalhes |
+    |----------------|----------|
+    | Serviços | Até 5 serviços ativos |
+    | Analytics | Métricas básicas de desempenho |
+    | Pagamentos | Semanal (todas as segundas) |
+    | Suporte | Suporte por email (resposta 24h) |
+    | Comissão | 20% (só comissão) ou 12% (subscrição) |
+  </Tab>
+  <Tab value="Top Expert">
+    **Nível Premium** — Conquistado pela excelência
+
+    Desbloqueie funcionalidades e benefícios premium:
+
+    | Característica | Detalhes |
+    |----------------|----------|
+    | Serviços | Ilimitados |
+    | Analytics | Insights avançados e previsões |
+    | Pagamentos | Diário (disponível) |
+    | Suporte | Suporte prioritário (resposta 4h) |
+    | Comissão | 15% (só comissão) ou 8% (subscrição) |
+    | Visibilidade | Destaque na pesquisa |
+
+    [Conheça os requisitos Top Expert →](/docs/expert/top-expert/requirements)
+  </Tab>
+</Tabs>
 
 ## Links Rápidos
 
 <Cards>
   <Card title="Configure o Seu Perfil" href="/docs/expert/getting-started/profile">
-    Crie um perfil profissional convincente
+    Crie um perfil profissional apelativo
   </Card>
   <Card title="Crie Serviços" href="/docs/expert/getting-started/services">
     Defina as suas ofertas de consulta
   </Card>
   <Card title="Gerir Disponibilidade" href="/docs/expert/getting-started/availability">
-    Defina as suas horas de trabalho e calendário
+    Defina os seus horários e calendário
   </Card>
   <Card title="Compreender Ganhos" href="/docs/expert/earnings/payouts">
-    Saiba sobre taxas e pagamentos
+    Saiba mais sobre taxas e pagamentos
   </Card>
 </Cards>
 
@@ -105,11 +138,12 @@ Conquistado através de excelente desempenho:
 
 A nossa equipa de suporte está aqui para ajudá-lo a ter sucesso:
 
-- **Email**: expert-support@eleva.care
-- **Tempo de Resposta**: Dentro de 24 horas
-- **Comunidade de Especialistas**: Junte-se à nossa comunidade privada de profissionais de saúde
+| Canal | Detalhes |
+|-------|----------|
+| Email | expert-support@eleva.care |
+| Tempo de Resposta | Em 24 horas |
+| Comunidade | Fóruns privados da comunidade de especialistas |
 
 <Callout type="success">
   Pronto para começar? [Configure o seu perfil →](/docs/expert/getting-started/profile)
 </Callout>
-
