--- a/src/content/docs/patient/en/index.mdx
+++ b/src/content/docs/patient/en/index.mdx
@@ -21,27 +21,69 @@ Eleva Care connects you with trusted, independent women's health experts. Whethe
   </Card>
 </Cards>
 
-## What We Offer
+## Areas of Care
 
-Our platform provides access to specialized care across multiple areas:
+<Tabs items={['Pregnancy', 'Pelvic Health', 'Menopause', 'Sexual Health']}>
+  <Tab value="Pregnancy">
+    **Pregnancy & Postpartum Support**
 
-- **Pregnancy & Postpartum** - Support through every stage of your journey
-- **Pelvic Health** - Expert care for pelvic floor concerns
-- **Menopause Management** - Guidance through hormonal transitions
-- **Sexual Health** - Compassionate, evidence-based support
+    From conception through the fourth trimester, our experts provide comprehensive care including birth preparation, breastfeeding support, and postpartum recovery guidance.
+
+  </Tab>
+  <Tab value="Pelvic Health">
+    **Pelvic Floor Specialists**
+
+    Expert care for incontinence, prolapse, pelvic pain, and rehabilitation. Our specialists help you regain strength and confidence.
+
+  </Tab>
+  <Tab value="Menopause">
+    **Menopause Management**
+
+    Navigate hormonal transitions with guidance from endocrinologists, nutritionists, and specialists who understand your changing needs.
+
+  </Tab>
+  <Tab value="Sexual Health">
+    **Sexual Health & Wellness**
+
+    Compassionate, evidence-based support from therapists, counselors, and medical specialists in a judgment-free environment.
+
+  </Tab>
+</Tabs>
 
 ## Your First Steps
 
-1. **Create an Account** - Sign up with your email or social login
-2. **Complete Your Profile** - Help us understand your needs
-3. **Browse Experts** - Find specialists in your area of concern
-4. **Book an Appointment** - Select a time and confirm your booking
+<Steps>
+  <Step>
+    ### Create an Account
+
+    Sign up with your email or social login to access the platform.
+
+  </Step>
+  <Step>
+    ### Complete Your Profile
+
+    Help us understand your needs so we can recommend the right experts for you.
+
+  </Step>
+  <Step>
+    ### Browse Experts
+
+    Find specialists in your area of concern, filtered by specialty, language, and availability.
+
+  </Step>
+  <Step>
+    ### Book an Appointment
+
+    Select a time that works for you, complete payment, and receive instant confirmation.
+
+  </Step>
+</Steps>
 
 <Callout type="info">
-  **Need Help?** Our support team is available to assist you. Contact us at support@eleva.care
+  **Need Help?** Our support team is available to assist you at support@eleva.care
 </Callout>
 
-## Next Steps
+## Continue Reading
 
 <Cards>
   <Card title="How to Book" href="/docs/patient/booking">
@@ -50,9 +92,10 @@ Our platform provides access to specialized care across multiple areas:
   <Card title="Payment Options" href="/docs/patient/payments">
     Learn about accepted payment methods and pricing
   </Card>
+  <Card title="Reviews & Ratings" href="/docs/patient/reviews">
+    Understanding our review system
+  </Card>
   <Card title="FAQ" href="/docs/patient/faq">
     Answers to frequently asked questions
   </Card>
 </Cards>
-
-
