--- a/src/content/docs/patient/en/reviews.mdx
+++ b/src/content/docs/patient/en/reviews.mdx
@@ -9,129 +9,154 @@ Your feedback helps other patients find the right expert and helps experts impro
 
 ## Leaving a Review
 
-### When Can You Review?
-
 You can leave a review after your appointment is completed. You'll receive an email reminder within 24 hours.
 
-### How to Leave a Review
+<Steps>
+  <Step>
+    ### Access Past Appointments
 
-1. Go to **My Appointments** > **Past**
-2. Find the completed appointment
-3. Click **Leave Review**
-4. Rate your experience (1-5 stars)
-5. Add written feedback (optional but encouraged)
-6. Submit your review
+    Go to **My Appointments** → **Past** in your patient portal.
+  </Step>
+  <Step>
+    ### Select the Appointment
+
+    Find the completed appointment you want to review.
+  </Step>
+  <Step>
+    ### Rate Your Experience
+
+    Click **Leave Review** and rate from 1-5 stars.
+  </Step>
+  <Step>
+    ### Add Feedback
+
+    Write about your experience (optional but encouraged).
+  </Step>
+</Steps>
 
 ### Review Guidelines
 
-To ensure helpful reviews:
+<Tabs items={['Recommended', 'Avoid']}>
+  <Tab value="Recommended">
+    **Best Practices**
 
-**Do:**
+    - Be specific about your experience
+    - Mention what was particularly helpful
+    - Share constructive feedback
+    - Keep comments professional
+  </Tab>
+  <Tab value="Avoid">
+    **Please Avoid**
 
-- Be specific about your experience
-- Mention what was helpful
-- Share constructive feedback
-- Keep it professional
-
-**Don't:**
-
-- Include personal medical details
-- Use offensive language
-- Share the expert's private information
-- Review appointments you didn't attend
+    - Including personal medical details
+    - Using offensive language
+    - Sharing the expert's private information
+    - Reviewing appointments you didn't attend
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  Reviews are moderated to ensure they follow our community guidelines. Most reviews are published
-  within 24 hours.
+  Reviews are moderated to ensure they follow our community guidelines. Most reviews are published within 24 hours.
 </Callout>
 
 ## Understanding Ratings
 
-### Star Ratings
+### Star Rating System
 
-Our 5-star rating system:
+| Rating | Meaning |
+|--------|---------|
+| 5 Stars | Excellent - Exceeded expectations |
+| 4 Stars | Very Good - Met expectations |
+| 3 Stars | Good - Room for improvement |
+| 2 Stars | Fair - Some issues |
+| 1 Star | Poor - Significant problems |
 
-| Stars          | Meaning                           |
-| -------------- | --------------------------------- |
-| ⭐⭐⭐⭐⭐ (5) | Excellent - Exceeded expectations |
-| ⭐⭐⭐⭐ (4)   | Very Good - Met expectations      |
-| ⭐⭐⭐ (3)     | Good - Room for improvement       |
-| ⭐⭐ (2)       | Fair - Some issues                |
-| ⭐ (1)         | Poor - Significant problems       |
+### Rating Criteria
 
-### What We Rate
+When leaving a review, consider these aspects:
 
-When leaving a review, consider:
-
-- **Communication** - Was the expert clear and easy to understand?
-- **Professionalism** - Was the consultation handled professionally?
-- **Expertise** - Did the expert demonstrate knowledge in their field?
-- **Helpfulness** - Did you receive useful guidance?
-- **Punctuality** - Did the appointment start on time?
+<Accordions>
+  <Accordion title="Communication">
+    Was the expert clear and easy to understand? Did they explain things in a way you could follow?
+  </Accordion>
+  <Accordion title="Professionalism">
+    Was the consultation handled professionally? Did you feel respected and heard?
+  </Accordion>
+  <Accordion title="Expertise">
+    Did the expert demonstrate knowledge in their field? Were they able to answer your questions?
+  </Accordion>
+  <Accordion title="Helpfulness">
+    Did you receive useful guidance? Do you have a clear path forward?
+  </Accordion>
+  <Accordion title="Punctuality">
+    Did the appointment start on time? Was your time respected?
+  </Accordion>
+</Accordions>
 
 ### Expert Badges
 
-Experts may earn badges based on performance:
+Experts may earn recognition badges based on performance:
 
-- **Top Expert** - Consistently high ratings (4.8+ average)
-- **Quick Responder** - Responds to inquiries within 24 hours
-- **Highly Recommended** - High percentage of repeat bookings
+| Badge | Criteria |
+|-------|----------|
+| Top Expert | Consistently high ratings (4.8+ average) |
+| Quick Responder | Responds to inquiries within 24 hours |
+| Highly Recommended | High percentage of repeat bookings |
 
 ## Reading Reviews
 
 ### Finding Reviews
 
-View expert reviews on their profile page:
+View expert reviews directly on their profile page:
 
-1. Go to the expert's profile
+1. Navigate to the expert's profile
 2. Scroll to the **Reviews** section
 3. Read patient feedback
 4. Filter by rating or date
 
-### Verified Reviews
-
-All reviews on Eleva Care are from verified patients who completed an appointment. This ensures authentic feedback.
+<Callout>
+  All reviews on Eleva Care are from verified patients who completed an appointment. This ensures authentic, trustworthy feedback.
+</Callout>
 
 ### Review Statistics
 
-Each expert profile shows:
+Each expert profile displays:
 
 - Overall star rating
 - Total number of reviews
 - Rating breakdown by category
 - Recent review highlights
 
-## Editing or Removing Reviews
+## Managing Your Reviews
 
-### Editing Your Review
+<Accordions>
+  <Accordion title="Editing Your Review">
+    Made a mistake? You can edit your review within 7 days:
 
-Made a mistake? You can edit your review within 7 days:
+    1. Go to **My Reviews** in your patient portal
+    2. Find the review you want to edit
+    3. Click **Edit** and make your changes
+    4. Save your updates
+  </Accordion>
+  <Accordion title="Deleting Your Review">
+    To remove your review:
 
-1. Go to **My Reviews** in your patient portal
-2. Find the review
-3. Click **Edit**
-4. Make your changes
-5. Save
+    1. Go to **My Reviews**
+    2. Click **Delete** on the review
+    3. Confirm deletion
 
-### Requesting Removal
+    <Callout type="warning">
+      Once deleted, your review cannot be recovered. You can leave a new review if desired.
+    </Callout>
+  </Accordion>
+  <Accordion title="Expert Responses">
+    Experts may respond to reviews. If an expert responds:
 
-To remove your review:
-
-1. Go to **My Reviews**
-2. Click **Delete** on the review
-3. Confirm deletion
-
-<Callout type="warning">
-  Once deleted, your review cannot be recovered. You can leave a new review if desired.
-</Callout>
-
-## Responding to Expert Responses
-
-Experts may respond to reviews. If an expert responds to your review:
-
-1. You'll receive a notification
-2. View the response on the review page
-3. You cannot reply to responses
+    - You'll receive a notification
+    - View the response on the review page
+    - Responses are visible to all users
+  </Accordion>
+</Accordions>
 
 ## Reporting Concerns
 
@@ -139,42 +164,52 @@ Experts may respond to reviews. If an expert responds to your review:
 
 If you see a review that violates our guidelines:
 
-1. Click **Report** on the review
-2. Select the reason
-3. Submit your report
+<Steps>
+  <Step>
+    ### Report the Review
 
-We'll investigate and take action if needed.
+    Click **Report** on the review in question.
+  </Step>
+  <Step>
+    ### Select a Reason
 
-### Dispute Resolution
+    Choose the most appropriate reason for reporting.
+  </Step>
+  <Step>
+    ### Submit
 
-If you have a serious concern about an expert:
+    Our team will investigate and take action if needed.
+  </Step>
+</Steps>
 
-1. Contact support@eleva.care
-2. Provide details of the issue
-3. Our team will investigate
+### Serious Concerns
 
-## FAQ
+For significant issues with an expert, contact support@eleva.care directly with details of your concern. Our team will investigate promptly.
 
-### Are reviews anonymous?
+## Frequently Asked Questions
 
-Reviews show your first name and last initial (e.g., "Maria S."). Your full name is not displayed.
+<Accordions>
+  <Accordion title="Are reviews anonymous?">
+    Reviews show your first name and last initial (e.g., "Maria S."). Your full name is not displayed publicly.
+  </Accordion>
+  <Accordion title="Can experts see who left negative reviews?">
+    Experts can see the first name and initial of all reviewers, regardless of rating.
+  </Accordion>
+  <Accordion title="How long do reviews stay visible?">
+    Reviews remain visible indefinitely unless you delete them or they violate our guidelines.
+  </Accordion>
+  <Accordion title="Can I review if the expert canceled?">
+    No, reviews can only be left for completed appointments.
+  </Accordion>
+</Accordions>
 
-### Can experts see who left negative reviews?
+---
 
-Experts can see the first name and initial of all reviewers, regardless of rating.
-
-### How long do reviews stay visible?
-
-Reviews remain visible indefinitely unless you delete them or they violate our guidelines.
-
-### Can I review if the expert canceled?
-
-No, reviews can only be left for completed appointments.
-
-## Need Help?
-
-For questions about reviews:
-
-- **Email**: support@eleva.care
-- **Help Center**: [FAQ](/docs/patient/faq)
-
+<Cards>
+  <Card title="How to Book" href="/docs/patient/booking">
+    Schedule your next appointment
+  </Card>
+  <Card title="FAQ" href="/docs/patient/faq">
+    More frequently asked questions
+  </Card>
+</Cards>
