--- a/src/content/docs/patient/pt/index.mdx
+++ b/src/content/docs/patient/pt/index.mdx
@@ -1,57 +1,93 @@
 ---
 title: Começar
-description: Saiba como encontrar e marcar consultas com especialistas em saúde feminina na Eleva Care.
+description: Aprenda como encontrar e marcar consultas com especialistas em saúde feminina na Eleva Care.
 ---
 
 # Bem-vinda à Eleva Care
 
-A Eleva Care conecta-a com especialistas de confiança e independentes em saúde feminina. Quer esteja à procura de apoio durante a gravidez, cuidados pós-parto, orientação em saúde pélvica ou gestão da menopausa, estamos aqui para a ajudar a encontrar o especialista certo.
+A Eleva Care conecta-te com especialistas independentes e de confiança em saúde feminina. Quer procures apoio durante a gravidez, cuidados pós-parto, orientação em saúde pélvica ou gestão da menopausa, estamos aqui para te ajudar a encontrar o especialista certo.
 
 ## Como Funciona a Eleva Care
 
 <Cards>
-  <Card title="Encontre um Especialista" href="/docs/patient/booking">
-    Explore a nossa rede de profissionais de saúde licenciados especializados em saúde feminina.
+  <Card title="Encontrar Especialista" href="/docs/patient/booking">
+    Explora a nossa rede de profissionais de saúde licenciados especializados em saúde feminina.
   </Card>
-  <Card title="Marque a Sua Consulta" href="/docs/patient/booking#scheduling">
-    Escolha um horário que lhe convenha e marque online em minutos.
+  <Card title="Marcar Consulta" href="/docs/patient/booking#scheduling">
+    Escolhe um horário que te convém e marca online em minutos.
   </Card>
-  <Card title="Conheça o Seu Especialista" href="/docs/patient/booking#consultation">
-    Conecte-se através de videochamada segura ou presencialmente, conforme a disponibilidade do especialista.
+  <Card title="Conhecer o Especialista" href="/docs/patient/booking#consultation">
+    Conecta por videochamada segura ou presencialmente, dependendo da disponibilidade do especialista.
   </Card>
 </Cards>
 
-## O Que Oferecemos
+## Áreas de Cuidado
 
-A nossa plataforma proporciona acesso a cuidados especializados em múltiplas áreas:
+<Tabs items={['Gravidez', 'Saúde Pélvica', 'Menopausa', 'Saúde Sexual']}>
+  <Tab value="Gravidez">
+    **Apoio na Gravidez e Pós-Parto**
 
-- **Gravidez & Pós-Parto** - Apoio em todas as fases da sua jornada
-- **Saúde Pélvica** - Cuidados especializados para questões do pavimento pélvico
-- **Gestão da Menopausa** - Orientação nas transições hormonais
-- **Saúde Sexual** - Apoio compassivo e baseado em evidências
+    Desde a conceção até ao quarto trimestre, os nossos especialistas fornecem cuidados completos incluindo preparação para o parto, apoio à amamentação e orientação na recuperação pós-parto.
+  </Tab>
+  <Tab value="Saúde Pélvica">
+    **Especialistas em Pavimento Pélvico**
 
-## Os Seus Primeiros Passos
+    Cuidados especializados para incontinência, prolapso, dor pélvica e reabilitação. Os nossos especialistas ajudam-te a recuperar força e confiança.
+  </Tab>
+  <Tab value="Menopausa">
+    **Gestão da Menopausa**
 
-1. **Crie uma Conta** - Registe-se com o seu email ou login social
-2. **Complete o Seu Perfil** - Ajude-nos a compreender as suas necessidades
-3. **Explore os Especialistas** - Encontre profissionais na sua área de interesse
-4. **Marque uma Consulta** - Selecione um horário e confirme a sua marcação
+    Navega as transições hormonais com orientação de endocrinologistas, nutricionistas e especialistas que compreendem as tuas necessidades em mudança.
+  </Tab>
+  <Tab value="Saúde Sexual">
+    **Saúde Sexual e Bem-Estar**
+
+    Apoio compassivo e baseado em evidências de terapeutas, conselheiros e especialistas médicos num ambiente sem julgamento.
+  </Tab>
+</Tabs>
+
+## Os Teus Primeiros Passos
+
+<Steps>
+  <Step>
+    ### Criar uma Conta
+
+    Regista-te com o teu email ou login social para aceder à plataforma.
+  </Step>
+  <Step>
+    ### Completar o Perfil
+
+    Ajuda-nos a compreender as tuas necessidades para podermos recomendar os especialistas certos.
+  </Step>
+  <Step>
+    ### Explorar Especialistas
+
+    Encontra especialistas na tua área de interesse, filtrados por especialidade, idioma e disponibilidade.
+  </Step>
+  <Step>
+    ### Marcar Consulta
+
+    Seleciona um horário conveniente, completa o pagamento e recebe confirmação instantânea.
+  </Step>
+</Steps>
 
 <Callout type="info">
-  **Precisa de Ajuda?** A nossa equipa de suporte está disponível para a assistir. Contacte-nos em support@eleva.care
+  **Precisas de Ajuda?** A nossa equipa de suporte está disponível em support@eleva.care
 </Callout>
 
-## Próximos Passos
+## Continuar a Ler
 
 <Cards>
   <Card title="Como Marcar" href="/docs/patient/booking">
-    Guia passo a passo para marcar a sua primeira consulta
+    Guia passo a passo para marcar a tua primeira consulta
   </Card>
   <Card title="Opções de Pagamento" href="/docs/patient/payments">
-    Conheça os métodos de pagamento aceites e preços
+    Conhece os métodos de pagamento aceites e preços
+  </Card>
+  <Card title="Avaliações" href="/docs/patient/reviews">
+    Compreender o nosso sistema de avaliações
   </Card>
   <Card title="FAQ" href="/docs/patient/faq">
-    Respostas às perguntas mais frequentes
+    Respostas às perguntas frequentes
   </Card>
 </Cards>
-
