--- a/src/content/docs/patient/pt/payments.mdx
+++ b/src/content/docs/patient/pt/payments.mdx
@@ -1,113 +1,156 @@
 ---
-title: Pagamentos & Preços
-description: Saiba mais sobre métodos de pagamento, preços, reembolsos e faturação na Eleva Care.
+title: Pagamentos e Preços
+description: Conhece os métodos de pagamento, preços, reembolsos e faturação na Eleva Care.
 ---
 
-# Pagamentos & Preços
+# Pagamentos e Preços
 
-A Eleva Care disponibiliza um sistema de pagamento seguro e transparente. Este guia abrange tudo o que precisa de saber sobre o pagamento das suas consultas.
+A Eleva Care fornece um sistema de pagamento seguro e transparente. Este guia cobre tudo o que precisas de saber sobre pagar as tuas consultas.
 
 ## Métodos de Pagamento Aceites
 
-Aceitamos os seguintes métodos de pagamento:
+<Tabs items={['Cartões', 'Métodos Regionais']}>
+  <Tab value="Cartões">
+    **Cartões de Crédito e Débito**
 
-### Cartões de Crédito & Débito
+    Aceitamos todos os principais cartões processados de forma segura através do Stripe:
 
-- Visa
-- Mastercard
-- American Express
+    - Visa
+    - Mastercard
+    - American Express
+  </Tab>
+  <Tab value="Métodos Regionais">
+    **Opções de Pagamento Locais**
 
-### Métodos de Pagamento Locais
+    Dependendo da tua região, métodos adicionais podem estar disponíveis:
 
-Dependendo da sua região:
-
-- **Portugal**: Multibanco (transferência bancária)
-- **Espanha**: Transferências bancárias
-- **Brasil**: PIX (brevemente)
+    | Região | Método | Estado |
+    |--------|--------|--------|
+    | Portugal | Multibanco | Disponível |
+    | Espanha | Transferência Bancária | Disponível |
+    | Brasil | PIX | Em Breve |
+  </Tab>
+</Tabs>
 
 <Callout type="info">
-  Todos os pagamentos são processados de forma segura através do Stripe, um fornecedor de pagamentos líder em que confiam milhões de empresas em todo o mundo.
+  Todos os pagamentos são processados de forma segura através do Stripe, um fornecedor de pagamentos líder, confiado por milhões de empresas em todo o mundo.
 </Callout>
 
 ## Como Funcionam os Preços
 
 ### Preços Definidos pelos Especialistas
 
-Cada especialista define as suas próprias taxas de consulta. Os preços variam com base em:
+Cada especialista define as suas próprias taxas de consulta com base em:
 
-- **Nível de experiência** - Especialistas da Comunidade vs. Top Experts
-- **Tipo de consulta** - Inicial vs. seguimento
-- **Duração** - Sessões de 30, 45 ou 60 minutos
-- **Especialidade** - Diferentes áreas de especialização
+| Fator | Descrição |
+|-------|-----------|
+| Nível de Especialização | Comunidade vs. Top Experts |
+| Tipo de Consulta | Inicial vs. seguimento |
+| Duração | Sessões de 30, 45 ou 60 minutos |
+| Especialidade | Diferentes áreas de expertise |
 
 ### O Que Está Incluído
 
-O seu pagamento cobre:
+<Tabs items={['Incluído', 'Não Incluído']}>
+  <Tab value="Incluído">
+    O teu pagamento cobre:
 
-- ✅ O tempo completo da consulta
-- ✅ Plataforma de videochamada segura
-- ✅ Notas da sessão (se partilhadas pelo especialista)
-- ✅ Recomendações de seguimento
+    - Tempo completo de consulta conforme marcado
+    - Acesso à plataforma de videochamada segura
+    - Notas da sessão (se partilhadas pelo especialista)
+    - Recomendações de seguimento
+  </Tab>
+  <Tab value="Não Incluído">
+    O teu pagamento não cobre:
 
-### O Que NÃO Está Incluído
-
-- ❌ Medicamentos com receita
-- ❌ Análises laboratoriais ou procedimentos de diagnóstico
-- ❌ Exames presenciais (salvo especificação)
+    - Medicamentos prescritos
+    - Análises ou procedimentos de diagnóstico
+    - Exames presenciais (exceto se especificado)
+  </Tab>
+</Tabs>
 
 ## Processo de Pagamento
 
-### Quando Paga
+<Steps>
+  <Step>
+    ### Selecionar Consulta
 
-O pagamento é cobrado quando marca a sua consulta:
+    Escolhe o horário da consulta e prossegue para o checkout.
+  </Step>
+  <Step>
+    ### Introduzir Dados de Pagamento
 
-1. Selecione o horário da consulta
-2. Introduza os dados de pagamento
-3. O pagamento é autorizado
-4. Email de confirmação enviado
+    Fornece as informações de pagamento de forma segura.
+  </Step>
+  <Step>
+    ### Autorização
 
-### Retenção de Pagamento
+    O pagamento é autorizado e retido de forma segura.
+  </Step>
+  <Step>
+    ### Confirmação
 
-O seu pagamento é retido em segurança até 24 horas após a conclusão da sua consulta. Isto protege tanto a si como ao especialista.
+    Recebe email de confirmação instantâneo com detalhes da consulta.
+  </Step>
+</Steps>
 
-## Reembolsos & Cancelamentos
+<Callout>
+  O teu pagamento é retido de forma segura até 24 horas após a conclusão da consulta. Isto protege tanto a ti como ao especialista.
+</Callout>
+
+## Reembolsos e Cancelamentos
 
 ### Janelas de Cancelamento
 
-| Prazo | Valor do Reembolso |
-|-------|-------------------|
-| 48+ horas antes | 100% de reembolso |
-| 24-48 horas antes | 50% de reembolso |
+| Prazo | Montante de Reembolso |
+|-------|----------------------|
+| 48+ horas antes | 100% reembolso |
+| 24-48 horas antes | 50% reembolso |
 | Menos de 24 horas | Sem reembolso |
 
 <Callout type="warning">
-  As políticas de cancelamento podem variar por especialista. Verifique o perfil do especialista para a sua política específica.
+  As políticas de cancelamento podem variar por especialista. Verifica sempre o perfil do especialista para a política específica antes de marcar.
 </Callout>
 
-### Como Pedir um Reembolso
+### Como Pedir Reembolso
 
-1. Vá a **As Minhas Consultas**
-2. Encontre a consulta
-3. Clique em **Cancelar** ou **Pedir Reembolso**
-4. Siga as instruções
+<Steps>
+  <Step>
+    ### Aceder às Consultas
 
-Os reembolsos são processados dentro de 5-10 dias úteis para o seu método de pagamento original.
+    Vai a **Minhas Consultas** no portal de paciente.
+  </Step>
+  <Step>
+    ### Encontrar a Consulta
 
-### Cobranças Contestadas
+    Localiza a consulta que desejas cancelar.
+  </Step>
+  <Step>
+    ### Pedir Reembolso
 
-Se tiver um problema com uma cobrança:
+    Clica em **Cancelar** ou **Pedir Reembolso** e segue as instruções.
+  </Step>
+</Steps>
 
-1. Contacte primeiro o especialista para resolver a questão
-2. Se não resolvido, contacte support@eleva.care
-3. Investigaremos e mediaremos
+Os reembolsos são processados em 5-10 dias úteis para o método de pagamento original.
 
-## Recibos & Faturas
+### Disputas de Cobrança
 
-### Aceder aos Seus Recibos
+<Accordions>
+  <Accordion title="Como resolver uma disputa de cobrança">
+    Se tiveres um problema com uma cobrança:
 
-1. Vá a **Portal do Paciente** > **Faturação**
-2. Veja todos os pagamentos passados
-3. Descarregue recibos em PDF
+    1. **Contacta primeiro o especialista** - Muitos problemas podem ser resolvidos diretamente
+    2. **Contacta o suporte** - Email para support@eleva.care se não resolvido
+    3. **Investigação** - Investigaremos e mediaremos a disputa
+  </Accordion>
+</Accordions>
+
+## Recibos e Faturas
+
+### Aceder aos Recibos
+
+Navega para **Portal de Paciente** → **Faturação** para ver todos os pagamentos passados e descarregar recibos em PDF.
 
 ### Detalhes da Fatura
 
@@ -116,43 +159,52 @@ Cada recibo inclui:
 - Data e hora do serviço
 - Nome e credenciais do especialista
 - Descrição do serviço
-- Valor do pagamento
+- Montante do pagamento
 - ID da transação
 
-### Para Reembolso de Seguro
-
-Alguns planos de seguro podem reembolsar consultas de telemedicina. O seu recibo inclui todos os detalhes necessários para submeter um pedido.
+<Callout type="info">
+  **Reembolso de Seguro**: Alguns planos de seguro podem reembolsar consultas de telemedicina. O teu recibo inclui todos os detalhes necessários para submeter um pedido.
+</Callout>
 
 ## Segurança
 
-### Proteção de Dados
+<Tabs items={['Proteção de Dados', 'Segurança da Conta']}>
+  <Tab value="Proteção de Dados">
+    **Segurança de Pagamento**
 
-- Todos os dados de pagamento são encriptados
-- Nunca armazenamos o número completo do seu cartão
-- Conformidade com PCI DSS
+    - Todos os dados de pagamento são encriptados de ponta a ponta
+    - Nunca armazenamos o número completo do teu cartão
+    - Infraestrutura em conformidade com PCI DSS
+    - Armazenamento de cartão tokenizado via Stripe
+  </Tab>
+  <Tab value="Segurança da Conta">
+    **Proteção da Conta**
 
-### Autenticação de Dois Fatores
+    Ativa a Autenticação de Dois Fatores (2FA) nas definições da conta para segurança adicional em todas as transações.
+  </Tab>
+</Tabs>
 
-Ative a 2FA para segurança adicional da conta nas suas definições de conta.
+## Perguntas Frequentes
 
-## FAQ
+<Accordions>
+  <Accordion title="Posso guardar o meu método de pagamento?">
+    Sim, podes guardar o teu cartão para checkout mais rápido. Os dados do cartão são armazenados de forma segura pelo Stripe, não nos nossos servidores.
+  </Accordion>
+  <Accordion title="Há taxas escondidas?">
+    Não. O preço mostrado ao marcar é o montante total que pagarás. Sem taxas de plataforma ou cobranças escondidas.
+  </Accordion>
+  <Accordion title="Em que moeda serei cobrado?">
+    Serás cobrado na moeda mostrada no checkout, tipicamente baseada na localização do especialista.
+  </Accordion>
+</Accordions>
 
-### Posso guardar o meu método de pagamento?
+---
 
-Sim, pode guardar o seu cartão para checkout mais rápido. Os detalhes do seu cartão são armazenados de forma segura pelo Stripe.
-
-### Existem taxas escondidas?
-
-Não. O preço mostrado ao marcar é o valor total que pagará. Sem taxas de plataforma ou cobranças escondidas.
-
-### Em que moeda serei cobrado?
-
-Será cobrado na moeda mostrada no checkout, tipicamente baseada na localização do especialista.
-
-## Precisa de Ajuda?
-
-Para questões relacionadas com pagamentos:
-
-- **Email**: billing@eleva.care
-- **Suporte**: support@eleva.care
-
+<Cards>
+  <Card title="Como Marcar" href="/docs/patient/booking">
+    Guia de marcação passo a passo
+  </Card>
+  <Card title="FAQ" href="/docs/patient/faq">
+    Mais perguntas frequentes
+  </Card>
+</Cards>
